--- a/app/design/frontend/rwd/default/locale/nl_NL/translate.csv
+++ b/app/design/frontend/rwd/default/locale/nl_NL/translate.csv
@@ -2,22 +2,22 @@
 "###","Custom phrases that exist only in this theme."
 "###","- - - - - - - - - - - - - - - - - - - - -"
 "###","Page Module"
-"Results per page","Treffer per Seite"
-"%s-%s of %s","%s-%s von %s"
+"Results per page","Hits per pagina"
+"%s-%s of %s","%s-%s van %s"
 "###","Catalog Module"
 "Filter","Filter"
-"View Details","Beschreibung anzeigen"
-"Share on Facebook","Auf Facebook teilen"
-"Share on Twitter","Auf Twitter teilen"
+"View Details","Toon beschrijving"
+"Share on Facebook","Deel op Facebook"
+"Share on Twitter","Deel op Twitter"
 "###","Checkout Module"
-"Are you sure you want to leave this page? You will need to go through the checkout steps again.","Sind Sie sicher, dass Sie diese Seite verlassen wollen? Sie müssen durch alle Bestellschritte nochmals gehen."
+"Are you sure you want to leave this page? You will need to go through the checkout steps again.","Weet je zeker dat je deze pagina wilt verlaten? Je moet opnieuw alle bestelstappen doorlopen."
 "Zip/Postal Code","PLZ"
-"Discount Codes?","Rabatt-Kode?"
+"Discount Codes?","Kortingscodes?"
 "###","Customer Module"
-"Registration is free and easy!","Registrieren ist kostenlos und einfach!"
-"Faster checkout","Schneller bezahlen"
-"Save multiple shipping addresses","Mehrere Lieferadressen speichern"
-"View and track orders and more","Ansicht, Sendungsverfolgung und mehr"
+"Registration is free and easy!","Registreren is gratis en eenvoudig!"
+"Faster checkout","Betaal sneller"
+"Save multiple shipping addresses","Bewaar meerdere bezorgadressen"
+"View and track orders and more","Bekijken, verzending volgen en meer"
 "###","Shipment Module"
-"Item in your order","Artikel Ihrer Bestellung"
-"Items in your order","Artikel Ihrer Bestellung"
+"Item in your order","Product in jouw bestelling"
+"Items in your order","Producten in jouw bestelling"
