--- a/app/locale/nl_NL/MageWorx_CustomOptions.csv
+++ b/app/locale/nl_NL/MageWorx_CustomOptions.csv
@@ -12,7 +12,7 @@
 "Default Option Qty Field Label","Standaard optie Aantal-veld label"
 "Delete","Verwijder"
 "Description","Omschrijving"
-"Display Qty for Options on the Front-end","Toon Aantal voor Opties op de frontend"
+"Display Qty for Options on the Front-end","Toon Aantal voor opties op de frontend"
 "Edit Template '%s'","Wijzig sjabloon '%s'"
 "Enable Custom Options Inventory","'Eigen Opties' voorraadbeheer inschakelen"
 "Enable Custom Options for Customer Groups","'Eigen Opties' inschakelen for klantgroepen"
