--- a/app/locale/nl_NL/Mage_Authorizenet.csv
+++ b/app/locale/nl_NL/Mage_Authorizenet.csv
@@ -16,18 +16,17 @@
 "Enabled","Ingeschakeld"
 "Expiration Date","Expiratie datum"
 "Gateway URL","Betaalplatform URL"
-"Maximum Order Total","Maximum Order Totaal"
+"Maximum Order Total","Maximum orderbedrag"
 "Merchant MD5","Webwinkelier MD5"
 "Merchant's Email","Webwinkelier E-mail"
-"Minimum Order Total","Minimum Order Totaal"
-"New Order Status","Nieuwe Orderstatus"
+"Minimum Order Total","Minimum orderbedrag"
+"New Order Status","Nieuwe orderstatus"
 "Order saving error: %s","Bestelling foutief opgeslagen: %s"
 "Payment Action","Betaalactie"
 "Payment authorization error.","Betaalfout"
 "Payment authorization error. Transacion id is empty.","Betaalfout. Het transactie id is leeg."
 "Payment error. Order was not found.","Betaalfout. De bestelling is niet gevonden."
-"Payment error. Paid amount doesn't match the order amount.","Betaalfout. Betaald bedrag komt niet overeen met totaal bestelling."
-"Payment error. Paid amount doesn\'t match the order amount.","Betaalfout. Betaald bedrag komt niet overeen met totaal bestelling.","en_US_1.5.0","en_US_1.9.3.7"
+"Payment error. Paid amount doesn\'t match the order amount.","Betaalfout. Betaald bedrag komt niet overeen met orderbedrag."
 "Payment from Applicable Countries","Betaling vanuit alle landen"
 "Payment from Specific Countries","Betaling vanuit specifieke landen"
 "Please, choose payment method","Kies een betaalmethode"
