--- a/app/locale/nl_NL/Mage_CatalogSearch.csv
+++ b/app/locale/nl_NL/Mage_CatalogSearch.csv
@@ -11,7 +11,6 @@
 "Catalog Advanced Search","Catalogus geavanceerd zoeken"
 "Catalog Search","Catalogus doorzoeken"
 "Catalog Search Index","Catalogus zoekindex"
-"Did you mean:","Bedoelt u soms:"
 "Don't see what you're looking for?","Niet gevonden wat u zocht?"
 "Enter ""0"" to enable layered navigation for any number of results.","Voer ""0"" in om gelaagde navigatie voor alle zoekresultaten te activeren."
 "Go","Ga"
@@ -21,8 +20,8 @@
 "List","Lijst"
 "Maximum Query Length","Maximale lengte zoekopdracht"
 "Maximum Query Words Count","Maximale aantal woorden in zoekopdracht"
-"Maximum Search query length is %s. Your query was cut.","Maximale zoek-query lengte is %s. Uw query is afgebroken."
-"Maximum words count is %1$s. In your search query was cut next part: %2$s.","Maximale aantal woorden is %1$s. Uw query is afgebroken na: %2$s."
+"Maximum Search query length is %s. Your query was cut.","Maximale zoekopdracht lengte is %s. Uw zoekopdracht is afgebroken."
+"Maximum words count is %1$s. In your search query was cut next part: %2$s.","Maximale aantal woorden is %1$s. Uw zoekopdracht is afgebroken na: %2$s."
 "Minimal Query Length","Minimale lengte zoekopdracht"
 "Minimum Search query length is %s","Minimum lengte zoekopdracht is %s"
 "Modify your search","Zoekopdracht bewerken"
@@ -32,7 +31,6 @@
 "Popular Search Terms","Populaire zoekwoorden"
 "Quick Search Form","Zoeken > Formulier"
 "Rebuild Catalog product fulltext search index","Product 'fulltext' zoekindex"
-"Related search terms:","Gerelateerde zoektermen:"
 "Relevance","Relevantie"
 "Results","Resultaten"
 "Search","Zoeken"
@@ -43,9 +41,7 @@
 "Search results for '%s'","Zoekresultaten voor ‘%s’"
 "Search results for: '%s'","Zoekresultaten voor ‘%s’"
 "Search:","Zoek:"
-"Show %s more results","Toon overige %s resultaten"
-"Show Autocomplete Results Count","Show Autocomplete Results Count","en_US_1.9.2.0","en_US_1.9.3.7"
-"Show more results","Toon meer resultaten"
+"Show Autocomplete Results Count","Show Autocomplete Results Count"
 "Specified date is invalid.","Opgegeven datum is ongeldig."
 "Subscribe to Feed","Abonneren op Feed"
 "There are no search terms available.","Er zijn momenteel geen populaire trefwoorden beschikbaar."
