--- a/app/locale/nl_NL/Mage_Directory.csv
+++ b/app/locale/nl_NL/Mage_Directory.csv
@@ -1,9 +1,8 @@
 "-- Please select --","-- Selecteer a.u.b. --"
 "Allowed Currencies","Toegestane valuta"
-"Base Currency","Basis-valuta"
-"Base currency is used for all online payment transactions. Scope is defined by the catalog price scope (""Catalog"" > ""Price"" > ""Catalog Price Scope"").","Basis valuta wordt gebruikt voor alle online transacties. Zie ook Catalogus > Prijs > Catalogus Prijs Scope"
-"Can't convert rate from ""%s-%s"".","Kan wisselkoers niet converteren van ""%s-%s""."
-"Can\'t convert rate from ""%s-%s"".","Kan wisselkoers niet converteren van ""%s-%s"".","en_US_1.7.0","en_US_1.9.3.7"
+"Base Currency","Basisvaluta"
+"Base currency is used for all online payment transactions. Scope is defined by the catalog price scope (""Catalog"" > ""Price"" > ""Catalog Price Scope"").","Basisvaluta wordt gebruikt voor alle online transacties. Zie ook Catalogus > Prijs > Catalogus Prijs Scope"
+"Can\'t convert rate from ""%s-%s"".","Kan wisselkoers niet converteren van ""%s-%s""."
 "Cannot retrieve rate from %s.","Kan geen waarde achterhalen van %s"
 "Connection Timeout in Seconds","Connectie timeout in seconden"
 "Continue &raquo;","Ga verder %raquo;"
@@ -14,13 +13,13 @@
 "Currency Options","Valuta-opties"
 "Currency Setup","Valuta-instellingen"
 "Currency Update Warnings","Waarschuwingen valuta-update"
-"Default Display Currency","Standaard-weergave valuta"
+"Default Display Currency","Standaardweergave valuta"
 "Directory","Map"
 "Display not required State","Toon staat als deze niet verplicht is"
 "Enabled","Ingeschakeld"
-"Error Email Recipient","Fout e-mail-ontvanger"
-"Error Email Sender","Fout e-mail-afzender"
-"Error Email Template","Fout e-mail-sjabloon"
+"Error Email Recipient","Fout e-mailontvanger"
+"Error Email Sender","Fout e-mailafzender"
+"Error Email Template","Fout e-mailsjabloon"
 "FATAL ERROR:","FATALE FOUT:"
 "Frequency","Frequentie"
 "Installed Currencies","Geinstalleerde valuta"
@@ -41,10 +40,10 @@
 "State/Province","Provincie"
 "States Options","Staat-opties"
 "Strikeiron Email Update Warnings","Strikeiron Email update waarschuwingen"
-"Unable to initialize the import model.","Niet mogelijk om het import model te initialiseren"
+"Unable to initialize the import model.","Niet mogelijk om het importmodel te initialiseren"
 "Undefined rate from ""%s-%s"".","Ongedefinieerd rate van ""%s-%s""."
 "WARNING:","WAARSCHUWING:"
 "Webservicex","Webservicex instellingen"
-"Your Currency","Uw valuta","en_US_1.9.1","en_US_1.9.3.7"
-"Your Currency:","Uw valuta:","en_US_1.9.1","en_US_1.9.3.7"
+"Your Currency","Uw valuta"
+"Your Currency:","Uw valuta:"
 "Your current currency is: %s","Uw huidige valuata is: %s"
