--- a/app/locale/nl_NL/Mage_Oauth.csv
+++ b/app/locale/nl_NL/Mage_Oauth.csv
@@ -39,7 +39,7 @@
 "Consumer Name","Klantnaam"
 "Consumers","Klanten"
 "Created At","Aangemaakt op"
-"Current Admin Password","Current Admin Password","en_US_1.9.1","en_US_1.9.3.7"
+"Current Admin Password","Current Admin Password"
 "Customer","Klant"
 "Customer My Account My OAuth Applications","Klant > Mijn Account > OAuth applicaties"
 "Delete","Verwijder"
