--- a/app/locale/nl_NL/Mage_Page.csv
+++ b/app/locale/nl_NL/Mage_Page.csv
@@ -1,11 +1,11 @@
 "%s Item(s)","%s artikel(en)"
-"%s-%s of %s","%s-%s van de %s","en_US_1.9.1","en_US_1.9.3.7"
-"&copy; 2012 Magento Demo Store. All Rights Reserved.","&copy; 2012 Magento Demo Store. Alle rechten voorbehouden."
-"&copy; 2013 Magento Demo Store. All Rights Reserved.","&copy; 2013 Magento Demo shop. Alle rechten voorbehouden"
-"&copy; 2014 Magento Demo Store. All Rights Reserved.","&copy; 2014 Magento Demo Store. All Rights Reserved.","en_US_1.9.1","en_US_1.9.1"
-"&copy; 2015 Magento Demo Store. All Rights Reserved.","&copy; 2015 Magento Demo Store. All Rights Reserved.","en_US_1.9.2.0","en_US_1.9.2.0"
-"&copy; 2016 Magento Demo Store. All Rights Reserved.","&copy; 2016 Magento Demo Store. All Rights Reserved.","en_US_1.9.2.4","en_US_1.9.3.0"
-"&copy; 2017 Magento Demo Store. All Rights Reserved.","&copy; 2017 Magento Demo Store. All Rights Reserved.","en_US_1.9.3.7","en_US_1.9.3.7"
+"%s-%s of %s","%s-%s van de %s"
+"&copy; 2012 Magento Demo Store. All Rights Reserved.","&copy; 2012 Magento Demo shop. Alle rechten voorbehouden."
+"&copy; 2013 Magento Demo Store. All Rights Reserved.","&copy; 2013 Magento Demo shop. Alle rechten voorbehouden."
+"&copy; 2014 Magento Demo Store. All Rights Reserved.","&copy; 2014 Magento Demo shop. Alle rechten voorbehouden."
+"&copy; 2015 Magento Demo Store. All Rights Reserved.","&copy; 2015 Magento Demo shop. Alle rechten voorbehouden."
+"&copy; 2016 Magento Demo Store. All Rights Reserved.","&copy; 2016 Magento Demo shop. Alle rechten voorbehouden."
+"&copy; 2017 Magento Demo Store. All Rights Reserved.","&copy; 2017 Magento Demo shop. Alle rechten voorbehouden."
 "(Shift-)Click or drag to change value","(Shift)klik of sleep om waarde te veranderen."
 "(ver. %s)","(versie %s)"
 "- Click on any of the time parts to increase it","- Klik op tijdknop om te verhogen"
@@ -16,11 +16,11 @@
 "- or click and drag for faster selection.","- of klik en sleep om sneller te selecteren."
 "-- Please Select --","-- Selecteer --"
 "1 column","1 kolom"
-"2 columns with left bar","2 kolommen met linker balk"
-"2 columns with right bar","2 kolommen met rechter balk"
+"2 columns with left bar","2 kolommen met linkerbalk"
+"2 columns with right bar","2 kolommen met rechterbalk"
 "3 columns","3 kolommen"
 "About the calendar","Over de kalender"
-"Account","Account","en_US_1.9.1","en_US_1.9.3.7"
+"Account","Account"
 "All Empty Layout Pages","Alle paginas met een lege lay-out"
 "All One-Column Layout Pages","Alle 1-kolom-paginas"
 "All Pages","Alle paginas"
@@ -29,13 +29,12 @@
 "All Two-Column Layout Pages (Left Column)","Alle 2-kolommen-paginas (linkerbalk)"
 "All Two-Column Layout Pages (Right Column)","Alle 2-kolommen-paginas (rechterbalk)"
 "Allow","Toestaan"
-"Breadcrumbs","Breadcrumbs"
-"Call us:","Bel ons:"
-"Click <a href=""%s"">here</a> if nothing has happened","Klik <a href=""%s"">hier</a> als er niets gebeurrt"
+"Breadcrumbs","Paneermeel"
+"Click <a href=""%s"">here</a> if nothing has happened","Klik <a href=""%s"">hier</a> als er niets gebeurt"
 "Close","Sluiten"
 "Close Window","Sluit venster"
-"DHTML Date/Time Selector","DHTML Datum/Tijd selectie"
-"Date selection:","Datum selectie:"
+"DHTML Date/Time Selector","DHTML Datum/Tijdselectie"
+"Date selection:","Datumselectie:"
 "Default Description","Standaard-omschrijving"
 "Default welcome msg!","Standaard-welkomstbericht"
 "Display %s first","Toon %s eerst"
@@ -50,9 +49,9 @@
 "Items %s to %s of %s total","Artikelen %s tot %s van %s in totaal"
 "JavaScript seems to be disabled in your browser.","JavaScript lijkt te zijn uitgeschakeld in uw browser."
 "Left Column","Hoofd-inhoud > Linker kolom"
-"Left Column First (shows above main column on smaller screens)","Left Column First (shows above main column on smaller screens)","en_US_1.9.1","en_US_1.9.3.7"
+"Left Column First (shows above main column on smaller screens)","Linker kolom eerster (shows above main column on smaller screens)"
 "Main Content Area","Hoofd-inhoud > Middelste kolom"
-"Menu","Menu","en_US_1.9.1","en_US_1.9.3.7"
+"Menu","Menu"
 "Navigation Bar","Navigatiebalk"
 "Next","Volgende"
 "Next month (hold for menu)","Volgende maand (ingedrukt voor menu)"
@@ -67,9 +66,9 @@
 "Previous","Vorige"
 "Redirecting...","Bezig met doorverwijzen..."
 "Report All Bugs","Rapporteer alle bugs."
-"Results per page","Resultaten per pagina","en_US_1.9.1","en_US_1.9.3.7"
+"Results per page","Resultaten per pagina"
 "Right Column","Hoofd-inhoud > Rechter kolom"
-"Search","Zoeken","en_US_1.9.1","en_US_1.9.3.7"
+"Search","Zoeken"
 "Select Store","Selecteer winkel"
 "Select Store:","Selecteer winkel"
 "Select date","Selecteer datum"
@@ -78,8 +77,7 @@
 "This website requires cookies to provide all of its features. For more information on what data is contained in the cookies, please see our <a href=""%s"">Privacy Policy page</a>. To accept cookies from this site, please click the Allow button below.","Deze website vereist cookies om gebruik te maken alle functionaliteiten. Voor meer informatie over welke data er wordt opgeslagen in de cookies, bekijk onze <a href=""%s"">Privacy policy pagina</a>. Om cookies te accepteren, klik op de 'Toestaan' knop."
 "Time selection:","Selecteer tijd"
 "Time:","Tijd:"
-"View All","Bekijk alles","en_US_1.9.1","en_US_1.9.3.7"
-"View All ","Bekijk alles van "
+"View All","Bekijk alles van "
 "Welcome, %s!","Welkom, %s!"
 "You must have JavaScript enabled in your browser to utilize the functionality of this website.","U moet JavaScript geactiveerd hebben om de volledige functionaliteit van deze website te kunnen benutten."
 "Your Language","Uw taal"
