--- a/app/locale/nl_NL/Mage_Persistent.csv
+++ b/app/locale/nl_NL/Mage_Persistent.csv
@@ -9,7 +9,7 @@
 "Cannot load configuration from file %s.","Kan configuratie niet laden uit bestand %s."
 "Checking &quot;Remember Me&quot; will let you access your shopping cart on this computer when you are logged out","Vink &quot;Onthoud mij&quot; aan om toegang te houden tot de winkelwagen na uitloggen"
 "Checkout as Guest","Afrekenen zonder account"
-"Checkout as a Guest","Afrekenen zonder account","en_US_1.9.1","en_US_1.9.3.7"
+"Checkout as a Guest","Afrekenen zonder account"
 "Checkout as a Guest or Register","Voor het eerst in deze webshop?"
 "City","Plaats"
 "Clear Persistence on Log Out","Winkelmand volgen uitschakelen bij uitloggen"
@@ -35,7 +35,7 @@
 "Login Information","Login gegevens"
 "Login or Create an Account","Inloggen of een account aanmaken"
 "New Customers","Nieuwe klanten"
-"New Here?","New Here?","en_US_1.9.1","en_US_1.9.3.7"
+"New Here?","Nieuw hier?"
 "Password","Wachtwoord"
 "Persist Shopping Cart","Winkelmand volgen"
 "Persistence Lifetime (seconds)","Levensduur in seconden"
@@ -45,15 +45,14 @@
 "Please log in below:","U kunt hieronder inloggen met uw e-mailadres en wachtwoord."
 "Please select region, state or province","Vul hier je provincie in"
 "Register","Bewaar mijn gegevens voor een volgende keer"
-"Register and Checkout","Register and Checkout","en_US_1.9.1","en_US_1.9.3.7"
+"Register and Checkout","Registreer en betaal"
 "Register and save time!","Voordelen van een account"
 "Register to Create an Account","Registreer om een account aan te maken"
 "Register with us for future convenience:","Bewaar uw gegevens. Dat werkt sneller en makkelijker."
 "Registered Customers","Geregistreerde klanten"
 "Registration is free and easy!","Registratie is gratis en makkelijk!"
 "Remember Me","Onthoud mij"
-"Required Fields","Verplichte velden"
-"Returning Customers","Returning Customers","en_US_1.9.1","en_US_1.9.3.7"
+"Returning Customers","Terugkerende klanten"
 "Save in address book","Opslaan in adresboek"
 "Save multiple shipping addresses","Opslaan meerdere afleveradressen"
 "Select State/Province...","Provincie selecteren"
@@ -62,7 +61,7 @@
 "Ship to this address","Naar dit adres verzenden"
 "Shopping cart has been updated with appropriate prices","Winkelwagen is bijgewerkt met actuele prijzen"
 "Sign Up for Newsletter","Abonneer u op onze nieuwsbrief"
-"Sign in to speed up your checkout process","Sign in to speed up your checkout process","en_US_1.9.1","en_US_1.9.3.7"
+"Sign in to speed up your checkout process","Sign in to speed up your checkout process"
 "State/Province","Provincie"
 "Street Address","Straatnaam"
 "Street Address %s","Adresgegevens"
@@ -72,6 +71,6 @@
 "VAT Number","BTW-nummer"
 "View and track orders and more","Bekijk en volg bestellingen, en meer"
 "Welcome, %s!","Welkom, %s!"
-"What's this?","Wat is dit?","en_US_1.9.1","en_US_1.9.3.7"
+"What's this?","Wat is dit?"
 "What\'s this?","Wat is dit?"
 "Zip/Postal Code","Postcode"
