--- a/app/locale/nl_NL/Mage_Poll.csv
+++ b/app/locale/nl_NL/Mage_Poll.csv
@@ -19,7 +19,7 @@
 "Edit Poll '%s'","Bewerken poll ‘%s’"
 "Edit Poll Answer","Poll-antwoord bewerken"
 "ID","Id"
-"Invalid Answer.","Incorrect antwoord"
+"Invalid Answer.","Ongeldig antwoord"
 "New Poll","Nieuwe poll"
 "Number of Responses","Aantal reacties"
 "Open","Open"
