--- a/app/locale/nl_NL/Mage_Tag.csv
+++ b/app/locale/nl_NL/Mage_Tag.csv
@@ -42,7 +42,7 @@
 "Last Name","Achternaam"
 "List","Lijst"
 "Manage Tags","Beheer tags"
-"Middle Name","Midden-naam","en_US_1.9.2.0","en_US_1.9.3.7"
+"Middle Name","Midden-naam"
 "My Recent Tags","Mijn recente tags"
 "My Tags","Tags"
 "Name","Naam"
