--- a/app/locale/nl_NL/Mage_Uploader.csv
+++ b/app/locale/nl_NL/Mage_Uploader.csv
@@ -1,9 +1,9 @@
-"...","...","en_US_1.9.3.0","en_US_1.9.3.7"
-"Browse Files...","Browse Files...","en_US_1.9.3.0","en_US_1.9.3.7"
-"Complete","Complete","en_US_1.9.3.0","en_US_1.9.3.7"
-"Maximum allowed file size for upload is","Maximum allowed file size for upload is","en_US_1.9.3.0","en_US_1.9.3.7"
-"Please check your server PHP settings.","Please check your server PHP settings.","en_US_1.9.3.0","en_US_1.9.3.7"
-"Remove","Remove","en_US_1.9.3.0","en_US_1.9.3.7"
-"There are files that were selected but not uploaded yet. After switching to another tab your selections will be lost. Do you wish to continue ?","There are files that were selected but not uploaded yet. After switching to another tab your selections will be lost. Do you wish to continue ?","en_US_1.9.3.0","en_US_1.9.3.7"
-"Upload Files","Upload Files","en_US_1.9.3.0","en_US_1.9.3.7"
-"Uploading...","Uploading...","en_US_1.9.3.0","en_US_1.9.3.7"
+"...","..."
+"Browse Files...","Browse Files..."
+"Complete","Complete"
+"Maximum allowed file size for upload is","Maximum allowed file size for upload is"
+"Please check your server PHP settings.","Please check your server PHP settings."
+"Remove","Remove"
+"There are files that were selected but not uploaded yet. After switching to another tab your selections will be lost. Do you wish to continue ?","There are files that were selected but not uploaded yet. After switching to another tab your selections will be lost. Do you wish to continue ?"
+"Upload Files","Upload Files"
+"Uploading...","Uploading..."
