--- a/app/locale/nl_NL/Mage_Wishlist.csv
+++ b/app/locale/nl_NL/Mage_Wishlist.csv
@@ -1,9 +1,9 @@
-"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping.","%1$s is succesvol toegevoegd aan uw verlanglijst. Klik <a href=""%2$s"">hier</a> om verder te gaan met winkelen."
+"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping.","%1$s is toegevoegd aan uw verlanglijst. Klik <a href=""%2$s"">hier</a> om verder te gaan met winkelen."
 "%1$s has been updated in your wishlist.","%1$s zijn bijgewerkt in uw verlanglijst"
 "%d product(s) have been added to shopping cart: %s.","%d product(en) zijn toegevoegd aan uw winkelwagen: %s."
 "%s for ""%s"".","%s voor ""%s""."
 "%s has been moved to wishlist %s","%s is verplaatst naar uw verlanglijst %s"
-"%s was added to your shopping cart.","%s is toegevoegd aan je winkelwagen.","en_US_1.9.2.0","en_US_1.9.3.7"
+"%s was added to your shopping cart.","%s is toegevoegd aan je winkelwagen."
 "%s's Wishlist","%s's verlanglijst"
 "* Required Fields","* Verplichte velden"
 "Add All to Cart","Alles toevoegen aan winkelwagen"
@@ -19,24 +19,21 @@
 "Are you sure you want to remove this product from your wishlist?","Weet u zeker dat u dit product van uw verlanglijst wilt verwijderen?"
 "Are you sure you would like to remove this item from the wishlist?","Popular Weet u zeker dat u dit product van uw verlanglijst wilt verwijderen?"
 "Back","Terug"
-"Can't delete item from wishlist","Kan product niet verwijderen van verlanglijst"
-"Can't save description %s","Kan omschrijving niet opslaan %s"
-"Can't update wishlist","Kan verlanglijst niet opslaan"
-"Can\'t delete item from wishlist","Kan product niet verwijderen van verlanglijst","en_US_1.5.0","en_US_1.9.3.7"
-"Can\'t save description %s","Kan omschrijving niet opslaan %s","en_US_1.4.0","en_US_1.9.3.7"
-"Can\'t update wishlist","Kan verlanglijst niet opslaan","en_US_1.4.2","en_US_1.9.3.7"
-"Cannot add item to shopping cart","Het item kan niet worden toegevoegd aan het winkelwagen"
+"Can\'t delete item from wishlist","Kan product niet verwijderen van verlanglijst"
+"Can\'t save description %s","Kan omschrijving niet opslaan %s"
+"Can\'t update wishlist","Kan verlanglijst niet opslaan"
+"Cannot add item to shopping cart","Het product niet toevoegen aan winkelwagen"
 "Cannot add the following product(s) to shopping cart: %s.","Kan de volgende producten niet toevoegen aan de winkelwagen: %s"
-"Cannot add the item to shopping cart.","Het product kan niet worden toegevoegd aan het winkelwagen."
-"Cannot add the selected product to shopping cart because the product was removed from the wishlist","Cannot add the selected product to shopping cart because the product was removed from the wishlist","en_US_1.9.1","en_US_1.9.3.7"
+"Cannot add the item to shopping cart.","Het product kan niet worden toegevoegd aan de winkelwagen."
+"Cannot add the selected product to shopping cart because the product was removed from the wishlist","Cannot add the selected product to shopping cart because the product was removed from the wishlist"
 "Cannot configure product","Kan het product niet configureren"
-"Cannot load wishlist item","Kan de verlanglijst niet laden"
+"Cannot load wishlist item","Kan het verlanglijst item niet laden"
 "Cannot move item to wishlist","Kan het product niet naar je verlanglijst verplaatsen"
 "Cannot specify product.","Het product kan niet worden gespecificeerd."
 "Cannot specify wishlist item.","Kan verlanglijst product niet specificeren."
 "Cannot specify wishlist.","Het verlanglijstje kan niet worden gespecificeerd."
 "Cannot update wishlist","Het bijwerken van het verlanglijstje is mislukt."
-"Check this checkbox if you want to add a link to an rss feed to your wishlist.","Vink het vakje aan om een link toe te voegen naar een RSS Feed van uw verlanglijst"
+"Check this checkbox if you want to add a link to an rss feed to your wishlist.","Vink aan om een link toe te voegen naar een RSS Feed van uw verlanglijst."
 "Click for price","Klik voor prijs"
 "Comment","Opmerking"
 "Comment:","Opmerking:"
@@ -53,8 +50,7 @@
 "Edit","Wijzigen"
 "Email Sender","E-mail afzender"
 "Email Template","E-mail sjabloon"
-"Email address can't be empty.","E-mailadres mag niet leeg zijn"
-"Email address can\'t be empty.","E-mailadres mag niet leeg zijn.","en_US_1.4.0","en_US_1.9.3.7"
+"Email address can\'t be empty.","E-mailadres mag niet leeg zijn."
 "Email addresses, separated by commas","E-mailadressen, gescheiden door komma’s"
 "Enabled","Ingeschakeld"
 "General Options","Algemene opties"
@@ -73,12 +69,12 @@
 "Please enter a valid email addresses, separated by commas. For example johndoe@domain.com, johnsmith@domain.com.","Voer geldige e-mailadressen in, gescheiden door komma’s. Bijvoorbeeld iemand@domein.com, iemandanders@domein.com."
 "Please input a valid email address.","Voer een geldig E-mail adres in aub."
 "Please, enter your comments...","Voeg uw notities toe aub."
-"Price","Prijs","en_US_1.9.1","en_US_1.9.3.7"
+"Price","Prijs"
 "Product","Artikel"
 "Product Details and Comment","Productdetails en opmerkingen"
 "Product(s) %s have required options. Each of them can be added to cart separately only.","De product(en) %s bevatten verplichte opties. Elk item kan afzonderlijk worden toegevoegd aan uw winkelwagen."
 "Product(s) %s have required options. Each product can only be added individually.","Product(en) %s hebben verplichte opties. Elk product kan enkel individueel toegevoegd worden."
-"Qty","Qty","en_US_1.9.1","en_US_1.9.3.7"
+"Qty","Qty"
 "RSS Feed","RSS feed"
 "RSS link to %s's wishlist","RSS-link naar %s’s verlanglijst"
 "Remove Item","Artikel verwijderen"
@@ -86,14 +82,14 @@
 "Remove item","Verwijder dit artikel"
 "Requested cart item doesn't exist","Opgevraagde winkelwagen-product bestaat niet."
 "Requested wishlist doesn't exist","Opgevraagde verlanglijst bestaat niet"
-"SKU","SKU","en_US_1.9.1","en_US_1.9.3.7"
-"Share Options","Delen Opties"
+"SKU","SKU"
+"Share Options","Deel opties"
 "Share Wishlist","Deel verlanglijst"
 "Share Your Wishlist","Deel uw verlanglijst"
 "Sharing Information","Informatie delen"
 "This Wishlist has no Items","De verlanglijst heeft geen producten"
 "This product(s) is currently out of stock","De product(en) zijn momenteel niet op voorraad."
-"Unable to add the following product(s) to shopping cart: %s.","De volgende product(en) kunnen niet worden toegevoegd aan het winkelwagen: %s."
+"Unable to add the following product(s) to shopping cart: %s.","De volgende product(en) kunnen niet worden toegevoegd aan de winkelwagen: %s."
 "Update Wishlist","Verlanglijst bijwerken"
 "User Description","Omschrijving gebruiker"
 "User description","Omschrijving gebruiker"
