--- a/app/locale/nl_NL/Mage_Api2.csv
+++ b/app/locale/nl_NL/Mage_Api2.csv
@@ -1,9 +1,7 @@
 "%s","%s"
-"%s role is a special one and can't be changed.","%s is een speciale rol en kan niet worden gewijzigd."
-"%s role is a special one and can't be deleted.","%s is een speciale rol en kan niet worden verwijderd."
-"%s role is a special one and can\'t be changed.","%s is een speciale rol en kan niet worden gewijzigd.","en_US_1.8.0","en_US_1.9.3.7"
-"%s role is a special one and can\'t be deleted.","%s is een speciale rol en kan niet worden verwijderd.","en_US_1.8.0","en_US_1.9.3.7"
-"%s role is protected.","De rol %s is beveiligd"
+"%s role is a special one and can\'t be changed.","%s is een speciale rol en kan niet worden gewijzigd."
+"%s role is a special one and can\'t be deleted.","%s is een speciale rol en kan niet worden verwijderd."
+"%s role is protected.","De rol %s is beveiligd."
 "ACL Attribute Rules","ACL attribuut rollen"
 "ACL Attributes Information","ACL attributen informatie"
 "Add","Toevoegen"
@@ -52,7 +50,7 @@
 "City","Plaats"
 "Company","Bedrijf"
 "Country","Land"
-"Coupon Code","Coupon code"
+"Coupon Code","Kortingscode"
 "Create","Maak aan"
 "Create Permanent Redirect for old URL","Maak een permanente redirect voor de oude URL"
 "Created From","Gemaakt via"
