--- a/app/locale/nl_NL/Mage_Bundle.csv
+++ b/app/locale/nl_NL/Mage_Bundle.csv
@@ -1,42 +1,42 @@
-"%1$s incl tax.","%1$s incl BTW."
+"%1$s incl tax.","%1$s incl. btw."
 "* Required Fields","* Verplichte velden"
 "-- Select --","-- Selecteer --"
 "Add New Option","Nieuwe optie toevoegen"
 "Add Selection","Selectie toevoegen"
-"As Low as","Vanaf"
-"As low as","Vanaf"
-"Bundle Items","Bundel-artikelen"
+"As Low as","Slechts"
+"As low as","Slechts"
+"Bundle Items","Bundelartikelen"
 "Bundle Product","Bundelproduct"
-"Bundle Product View Summary","Bundel product-bekijk samenvatting"
+"Bundle Product View Summary","Bundel product bekijk samenvatting"
 "Buy %1$s","Koop %1$s"
 "Buy %1$s for","Koop %1$s voor"
 "Buy %1$s for %2$s","Koop %1$s voor %2$s"
-"Buy %1$s for %2$s (%3$s incl. tax) each","Koop %1$s voor %2$s (%3$s incl. BTW) per stuk"
+"Buy %1$s for %2$s (%3$s incl. tax) each","Koop %1$s voor %2$s (%3$s incl. btw) per stuk"
 "Buy %1$s for %2$s each","Koop %1$s voor %2$s per stuk"
-"Buy %1$s with %2$s discount each","Bestel %1$s met %2$s korting"
-"Catalog Product View (Bundle)","Catalogus Product (Bundel)"
+"Buy %1$s with %2$s discount each","Bestel %1$s met %2$s korting per stuk"
+"Catalog Product View (Bundle)","Catalogus Productoverzicht (Bundel)"
 "Checkbox","Checkbox"
-"Choose a selection...","Kies een optie&hellip;"
+"Choose a selection...","Kies een optie..."
 "Click for price","Klik voor prijs"
 "Close","Sluiten"
 "Default","Standaard"
-"Default Qty","Standaard-aantal"
-"Default Title","Standaard-titel"
+"Default Qty","Standaard aantal"
+"Default Title","Standaard titel"
 "Drop-down","Dropdown"
 "Dynamic","Dynamisch"
-"Excl. Tax","Excl. BTW"
-"Excl. Tax:","Excl. BTW"
+"Excl. Tax","Excl. btw"
+"Excl. Tax:","Excl. btw"
 "Fixed","Vast"
 "From","Van"
 "From:","Van:"
 "Gift Message","Bericht bij kado"
-"Incl. Tax","Incl. BTW"
-"Incl. Tax:","Incl. BTW"
+"Incl. Tax","Incl. btw"
+"Incl. Tax:","Incl. btw"
 "Input Type","Type invoerveld"
 "Is Required","Is verplicht"
 "Message:","Bericht:"
 "Multiple Select","Meervoudige selectie"
-"N/A","N/B"
+"N/A","n.v.t."
 "No options of this product are available.","Er zijn geen opties voor dit product beschikbaar"
 "None","Geen"
 "Percent","Percentage"
@@ -47,13 +47,13 @@
 "Please select options for product.","Kies opties voor het product a.u.b."
 "Please specify product option(s).","Selecteer de productoptie(s)."
 "Position","Positie"
-"Price Range","Prijsrange"
+"Price Range","Prijsbereik"
 "Price Type","Prijstype"
 "Price as configured","Prijs zoals geconfigureerd"
 "Qty:","Aantal"
 "Radio Buttons","Radio buttons"
 "Required options are not selected.","De verplichte opties zijn niet geselecteerd."
-"SKU","SKU","en_US_1.9.1","en_US_1.9.3.7"
+"SKU","SKU"
 "Selected required options are not available.","De geselecteerde opties zijn niet beschikbaar."
 "Separately","Apart"
 "Ship Bundle Items","Bundel-artikelen verzenden"
@@ -64,7 +64,7 @@
 "To","Tot"
 "To:","Tot:"
 "Together","Samen"
-"Total incl. Tax: %1$s","Totaal incl. BTW: %1$s"
+"Total incl. Tax: %1$s","Totaal incl. btw: %1$s"
 "Use Default Value","Standaard waarde gebruiken"
 "User Defined Qty","Door gebruiker gedefinieerd aantal"
 "and","en"
