--- a/app/locale/nl_NL/Mage_Captcha.csv
+++ b/app/locale/nl_NL/Mage_Captcha.csv
@@ -10,11 +10,11 @@
 "Enable CAPTCHA on Frontend","CAPTCHA activeren in webshop"
 "Font","Lettertype"
 "Forms","Formulieren"
-"If 0 is specified, CAPTCHA on the Login form will be always available.","Als 0 is gekozen, zal CAPTCHA altijd zichtbaar zijn in het login formulier"
+"If 0 is specified, CAPTCHA on the Login form will be always available.","Als 0 is gekozen, zal CAPTCHA altijd zichtbaar zijn in het inlogformulier."
 "Incorrect CAPTCHA.","CAPTCHA fout."
 "Number of Symbols","Aantal symbolen"
 "Number of Unsuccessful Attempts to Login","Aantal verkeerde pogingen om in te loggen"
-"Please specify 8 symbols at the most. Range allowed (e.g. 3-5)","Specificeer maximaal 8 symbolen. Range mogelijk ( bijv 3-5)"
+"Please specify 8 symbols at the most. Range allowed (e.g. 3-5)","Specificeer maximaal 8 symbolen. Range mogelijk (bijv. 3-5)"
 "Please type the letters below","Type de letter hieronder"
 "Please type the letters from the image:","Type de letters van de afbeelding:"
 "Please use only letters (a-z or A-Z) or numbers (0-9) in this field. No spaces or other characters are allowed.<br />Similar looking characters (e.g. ""i"", ""l"", ""1"") decrease chance of correct recognition by customer.","Gebruik enkel letters (a-z of A-Z) of nummers (0-9) in dit veld. Geen spaties of andere karakters gebruiken."
