--- a/app/locale/nl_NL/Mage_CatalogInventory.csv
+++ b/app/locale/nl_NL/Mage_CatalogInventory.csv
@@ -1,19 +1,18 @@
-"""%s"" is not available in the requested quantity. %s of the items will be backordered.","""%s"" is niet beschikbaar in de gewenste hoeveelheid. %s items worden als backorder geplaatst."
-"%s is available for purchase in increments of %s","%s kan gekocht worden in veelvoud van %s."
+"""%s"" is not available in the requested quantity. %s of the items will be backordered.","""%s"" is niet beschikbaar in de gewenste hoeveelheid. %s items worden nabesteld."
 "%s is available for purchase in increments of %s only.","%s kan enkel gekocht worden in veelvoud van %s."
-"%s is not a correct comparsion method.","% is geen juiste methode voor vergelijken"
+"%s is not a correct comparsion method.","% is geen juiste vergelijkingsmethode."
 "<strong>Note</strong> that these settings are applicable to cart line items, not the whole cart.","Let op! Deze instellingen gelden voor de artikelen, niet voor de hele winkelwagen."
 "Add Minimum Qty","Voeg minimum hoeveelheid toe"
 "Allow Qty Below 0","Hoeveelheid onder 0 toestaan"
 "Allow Qty Below 0 and Notify Customer","Hoeveelheid onder 0 toestaan en klant inlichten"
 "Automatically Return Credit Memo Item to Stock","Voeg product toe aan voorraad indien er een creditfactuur is opgesteld."
-"Backorders","Backorders"
+"Backorders","Nabestellingen"
 "By Fixed value","Met vast bedrag"
 "By Percentage","Met percentage"
 "Cannot specify product identifier for the order item.","Kan geen product identifier specificeren voor het bestelde artikel."
 "Catalog Inventory","Catalogus voorraad"
 "Decrease Stock When Order is Placed","Verminder voorraad wanneer bestelling is geplaatst"
-"Display Out of Stock Products","Toon niet op voorraad producten"
+"Display Out of Stock Products","Toon producten die niet op voorraad zijn"
 "Display products availability in stock in the frontend","Toon de beschikbaarheid van de producten in de frontend"
 "Enable Qty Increments","Activeer opklimmende aantallen"
 "In Stock","Op voorraad"
@@ -26,25 +25,25 @@
 "Minimum Qty","Minimum hoeveelheid"
 "Minimum Qty Allowed in Shopping Cart","Minimaal hoeveelheid in winkelwagen"
 "Multi update product stock data","Multi-update product voorraad-data"
-"No Backorders","Geen backorders"
+"No Backorders","Geen nabestellingen"
 "Not all products are available in the requested quantity","Niet alle producten zijn beschikbaar in de gewenste hoeveelheid"
 "Notify for Quantity Below","Melden bij hoeveelheid lager dan"
-"Only %s left","Slechts 100 %s over","en_US_1.9.1","en_US_1.9.3.7"
+"Only %s left","Slechts 100 %s over"
 "Only X left Threshold","Maar X op voorraad"
 "Out of Stock","Niet op voorraad"
-"Product Name","Productnaam","en_US_1.9.1","en_US_1.9.3.7"
+"Product Name","Productnaam"
 "Product Stock Options","Instellingen productvoorraad"
-"Products will still be shown by direct product URLs.","Producten zullen worden getoond bij een directe product-URL"
-"Qty","Qty","en_US_1.9.1","en_US_1.9.3.7"
+"Products will still be shown by direct product URLs.","Producten zullen nog steeds getoond worden bij directe product-URL."
+"Qty","Qty"
 "Qty Increments","Opklimmend aantal"
 "Qty for Item's Status to Become Out of Stock","Aantal voordat product niet meer op voorraad is"
 "Retrieve stock data","Voorraadgegevens ophalen"
 "Retrieve stock data by product ids","Voorraadgegevens via product-ID ophalen"
 "Rule price","Regelprijs"
-"Set Items' Status to be In Stock When Order is Cancelled","Status wijzigen naar 'Op Voorraad' bij annuleren van order."
-"Some of the products are currently out of stock","Enkele  producten zijn momenteel niet op voorraad"
+"Set Items' Status to be In Stock When Order is Cancelled","Status wijzigen naar 'Op Voorraad' bij annuleren van bestelling."
+"Some of the products are currently out of stock","Een aantal producten is momenteel niet op voorraad"
 "Some of the products are currently out of stock.","Sommige van de producten zijn op dit moment niet op voorraad."
-"Some of the products are not available","Sommige producten zijn niet beschikbaar.","en_US_1.9.3.0","en_US_1.9.3.7"
+"Some of the products are not available","Sommige producten zijn niet beschikbaar."
 "Some of the products cannot be ordered in requested quantity.","Enkele producten kunnen niet in de gewenste hoeveelheid worden besteld"
 "Some of the products cannot be ordered in the requested quantity.","Enkele producten kunnen niet in de gewenste hoeveelheid worden besteld"
 "Stock Options","Voorraadopties"
@@ -56,7 +55,7 @@
 "The stock item for Product is not valid.","De voorraadstatus is ongeldig."
 "This product is available for purchase in increments of %s only.","Dit product kan uitsluitend in veelvoud van %s besteld worden."
 "This product is currently out of stock.","Dit product is momenteel niet op voorraad"
-"This product is not available in the requested quantity. %s of the items will be backordered.","Van het gewenste aantal zijn %s artikel(en) niet beschikbaar, deze worden als backorder geplaatst."
+"This product is not available in the requested quantity. %s of the items will be backordered.","Dit product is niet beschikbaar in de gewenste hoeveelheid. %s artikel(en) worden als backorder geplaatst."
 "To Fixed Value","Tot vast bedrag"
 "To Percentage","Naar percentage"
 "Undefined product type.","Producttype onbekend."
