--- a/app/locale/nl_NL/Mage_CatalogRule.csv
+++ b/app/locale/nl_NL/Mage_CatalogRule.csv
@@ -2,8 +2,8 @@
 "Actions","Acties"
 "Active","Actief"
 "Add New Rule","Nieuwe regel toevoegen"
-"An error occurred while deleting the rule. Please review the log and try again.","Een probleem is opgetreden bij het verwijderen van deze regel. Probeer het nogmaals."
-"An error occurred while saving the rule data. Please review the log and try again.","Een probleem is opgetreden bij het opslaan van deze regel. Probeer het nogmaals."
+"An error occurred while deleting the rule. Please review the log and try again.","Er is een probleem opgetreden bij het verwijderen van deze regel. Probeer het nogmaals."
+"An error occurred while saving the rule data. Please review the log and try again.","Er is een probleem opgetreden bij het opslaan van deze regel. Probeer het nogmaals."
 "Apply","Toepassen"
 "Apply Rules","Regels toepassen"
 "Attribute Set","Attributenset"
@@ -14,7 +14,7 @@
 "Catalog Price Rules","Catalogus prijsregels"
 "Category","Categorie"
 "Conditions","Voorwaarden"
-"Conditions (leave blank for all products)","Condities (laat leeg voor alle producten)"
+"Conditions (leave blank for all products)","Voorwaarden (laat leeg voor alle producten)"
 "Conditions Combination","Voorwaarden combinatie"
 "Customer Groups","Klantgroepen"
 "Date Expire","Verloopdatum"
@@ -47,9 +47,9 @@
 "The rule has been deleted.","Deze regel is verwijderd"
 "The rule has been saved.","Deze regel is opgeslagen"
 "The rules have been applied.","Deze regels worden toegepast"
-"There are rules that have been changed but were not applied. Only users with exclusive access can apply rules.","Er zijn regels welke zijn veranderd maar niet zijn toegepast. Alleen gebruikers met de exclusieve toegang kunnen deze regels toepassen."
-"There are rules that have been changed but were not applied. Please, click Apply Rules in order to see immediate effect in the catalog.","Er zijn regels aangepast, maar niet opgeslagen. Bevestig deze regels om meteen resultaat te zien"
-"This rule no longer exists.","Deze regel bestaat niet meer"
+"There are rules that have been changed but were not applied. Only users with exclusive access can apply rules.","Er zijn regels die zijn veranderd, maar niet zijn toegepast. Alleen gebruikers met exclusieve toegang kunnen deze regels toepassen."
+"There are rules that have been changed but were not applied. Please, click Apply Rules in order to see immediate effect in the catalog.","Er zijn regels aangepast, maar niet opgeslagen. Bevestig deze regels om meteen resultaat te zien."
+"This rule no longer exists.","Deze regel bestaat niet meer."
 "To Date","Tot datum"
 "To Fixed Amount","Tot vast bedrag"
 "To Percentage of the Original Price","Tot percentage van de oorspronkeljke prijs"
