--- a/app/locale/nl_NL/Mage_Cms.csv
+++ b/app/locale/nl_NL/Mage_Cms.csv
@@ -1,13 +1,13 @@
-"A block identifier with the same properties already exists in the selected store.","Een block identifier met dezelfde eigenschappen bestaat reeds."
-"A directory with the same name already exists. Please try another folder name.","Een directory met dezelfde naam bestaat reeds."
-"A page URL key for specified store already exists.","Een pagina met dezelfde URL bestaat reeds."
+"A block identifier with the same properties already exists in the selected store.","Er bestaat al een blok identifier met dezelfde eigenschappen."
+"A directory with the same name already exists. Please try another folder name.","Er bestaat al een directory met dezelfde naam."
+"A page URL key for specified store already exists.","Er bestaat al een pagina met deze URL."
 "Action","Actie"
 "Add New Block","Nieuw blok toevoegen"
 "Add New Page","Nieuwe pagina toevoegen"
 "All Countries","Alle landen"
 "An error occurred while saving the page.","Pagina kon niet opgeslagen worden. Probeer het opnieuw."
-"Anchor Custom Text","Link eigen tekst"
-"Anchor Custom Title","Link eigen titel"
+"Anchor Custom Text","Eigen linktekst"
+"Anchor Custom Title","Eigen linktitel"
 "Are you sure you want to delete current folder?","Wilt u de huidige map verwijderen?"
 "Are you sure you want to delete the selected file?","Wilt u het geselecteerde bestand verwijderen?"
 "Block","Blok"
@@ -23,9 +23,9 @@
 "CMS Page Link","CMS-pagina link"
 "CMS Page Link Block Template","CMS-pagina link tabel-template"
 "CMS Page Link Inline Template","CMS-pagina link inline-template"
-"CMS Pages (All)","CMS-pagina (alle)"
-"CMS Static Block","CMS Statisch Blok"
-"CMS Static Block Default Template","CMS Statisch Block > Standaard sjabloon"
+"CMS Pages (All)","CMS pagina's (alle)"
+"CMS Static Block","CMS content Blok"
+"CMS Static Block Default Template","CMS content Blok > Standaard sjabloon"
 "Cannot create new directory.","Kan geen nieuwe map aanmaken"
 "Cannot delete directory %s.","Kan map %s niet verwijderen"
 "Cannot delete root directory %s.","Kan root map $s niet verwijderen"
@@ -34,15 +34,15 @@
 "Content","Inhoud"
 "Content Heading","Content Titel"
 "Content Management","CMS-instellingen"
-"Contents of a Static Block","Inhoud van statisch blok"
+"Contents of a Static Block","Inhoud van content blok"
 "Create Folder...","Maak map...."
 "Custom Design","Eigen ontwerp"
-"Custom Design From","Custom design vanaf datum"
-"Custom Design To","Custom design tot datum"
-"Custom Layout","Custom lay-out"
-"Custom Layout Update XML","Custom XML lay-out update"
+"Custom Design From","Eigen ontwerp vanaf datum"
+"Custom Design To","Eigen ontwerp tot datum"
+"Custom Layout","Eigen lay-out"
+"Custom Layout Update XML","Eigen XML lay-out update"
 "Custom Theme","Eigen Thema"
-"Customer Tax Class Information","Gegevens BTW-tariefgroep klant"
+"Customer Tax Class Information","Gegevens btw-tariefgroep klant"
 "Date Created","Datum aangemaakt"
 "Delete Block","Blok verwijderen"
 "Delete File","Bestand verwijderen"
@@ -78,7 +78,7 @@
 "Manage Pages","Beheer pagina's"
 "Media Gallery","Mediagallerij"
 "Media Storage","Media opslag"
-"Meta Data","Meta-gegevens"
+"Meta Data","Meta-informatie"
 "Meta Description","Meta-omschrijving"
 "Meta Keywords","Meta-keywords"
 "New Block","Nieuw blok"
@@ -90,7 +90,7 @@
 "Page Status","Pagina status"
 "Page Title","Paginatitel"
 "Pages","Pagina's"
-"Product Tax Class Information","BTW-tariefgegevens van product"
+"Product Tax Class Information","Product btw tarief gegevens"
 "Redirect to CMS-page if Cookies are Disabled","Redirect naar de CMS-page als de Cookies zijn uitgeschakeld"
 "Relative to Website Base URL","Wordt automatisch achter de website URL gezet (bijv. www.website.nl/paginanaam)"
 "Save Block","Blok opslaan"
@@ -100,7 +100,7 @@
 "Select Page...","Selecteer pagina..."
 "Show Breadcrumbs for CMS Pages","Kruimelpad tonen voor CMS-pagina's"
 "Show Notice if JavaScript is Disabled","Waarschuw als Javascript gedeactiveerd is"
-"Static Blocks","Statische blokken"
+"Static Blocks","Content blokken"
 "Status","Status"
 "Storage Root","Opslag root"
 "Store View","Winkelzicht"
@@ -112,12 +112,12 @@
 "The page URL key contains capital letters or disallowed symbols.","De URL-key van de pagina heeft hoofdletters of niet toegestane tekens."
 "The page has been deleted.","De pagina is verwijderd"
 "The page has been saved.","De pagina is opgeslagen"
-"The static block content cannot contain  directive with its self.","De inhoud van het statisch-blok laad zich zelf in."
+"The static block content cannot contain  directive with its self.","De inhoud van het content blok laadt zichzelf in."
 "This block no longer exists.","Dit blok bestaat niet langer meer"
 "This page no longer exists.","Deze pagina bestaat niet langer meer"
 "Title","Titel"
 "URL Key","URL key"
 "Unable to find a block to delete.","Het te verwijderen blok is niet gevonden"
 "Unable to find a page to delete.","De te verwijderen pagina is niet gevonden"
-"WYSIWYG Options","WYSIWYG Opties"
+"WYSIWYG Options","WYSIWYG opties"
 "px.","px."
