--- a/app/locale/nl_NL/Mage_Eav.csv
+++ b/app/locale/nl_NL/Mage_Eav.csv
@@ -1,5 +1,5 @@
 """%s"" contains not only digit characters.","""%s"" bevat niet enkel numerieke karakters."
-"""%s"" does not fit the entered date format.","""%s"" past niet in het ingevulde datum-formaat."
+"""%s"" does not fit the entered date format.","""%s"" past niet in het ingevulde datumformaat."
 """%s"" exceeds the allowed file size.","""%s"" overschrijdt de toegestane bestandsgrootte."
 """%s"" exceeds the allowed length.","""%s"" overschrijdt de toegestande lengte."
 """%s"" has not only alphabetic and digit characters.","""%s"" heeft niet alleen alfabetische en numerieke karakters."
@@ -40,11 +40,11 @@
 "Attribute Label","Attribuutlabel"
 "Attribute Properties","Attribuuteigenschappen"
 "Attribute object is undefined","Attribuut object is niet opgegeven"
-"Attribute set with the ""%s"" name already exists.","Attribuutset met de naam ""%s"" bestaat al."
+"Attribute set with the ""%s"" name already exists.","Attributenset met de naam ""%s"" bestaat al."
 "Attribute with the same code","Attribuut met dezelfde code"
-"Can't create table: %s","Kan tabel niet aanmaken: %s"
-"Can\'t create table: %s","Kan tabel niet aanmaken: %s","en_US_1.6.0","en_US_1.9.3.7"
+"Can\'t create table: %s","Kan tabel niet aanmaken: %s"
 "Catalog Input Type for Store Owner","Catalogus invoertype voor winkeleigenaar"
+"Country of Manufacture","Land van fabricage"
 "Current module EAV entity is undefined","Huidige module EAV entiteit is ongedefinieerd"
 "Current module pathname is undefined","Huidige module padnaam is ongedefinieerd."
 "Data integrity: No header row found for attribute","Data-integriteit: Geen header-rij gevonden voor attribuut"
@@ -53,7 +53,7 @@
 "Default Product Listing Sort by does not exist in Available Product Listing Sort By.","Standaard product sortering komt niet voor niet in de beschikbare-product-sorteringen-lijst"
 "Default Product Listing Sort by not exists on Available Product Listing Sort By","Default Product Listing Sort by not exists on Available Product Listing Sort b"
 "Default Value","Standaard waarde"
-"Default option value is not defined","Waarde van standaard-optie is niet gedefinieerd"
+"Default option value is not defined","Waarde van standaardoptie is niet gedefinieerd"
 "Delete","Verwijderen"
 "Dropdown","Dropdown"
 "Email","E-mail"
@@ -78,7 +78,7 @@
 "Invalid attribute type","Ongeldig attribuuttype"
 "Invalid character encountered in increment ID: %s","Ongeldig teken in oplopend ID: %s"
 "Invalid date","Ongeldige datum"
-"Invalid default date","Ongeldige standaard datum"
+"Invalid default date","Ongeldige standaarddatum"
 "Invalid default decimal value","Ongeldige standaard decimale waarde"
 "Invalid entity specified","Ongeldige entiteit opgegeven"
 "Invalid entity supplied.","Ongeldige entiteit opgegeven."
@@ -110,11 +110,10 @@
 "System","Systeem"
 "Text Area","Tekstvak"
 "Text Field","Tekstveld"
-"The attribute code '%s' is reserved by system. Please try another attribute code","The attribute code '%s' is reserved by system. Please try another attribute code"
-"The attribute code \'%s\' is reserved by system. Please try another attribute code","The attribute code \'%s\' is reserved by system. Please try another attribute code","en_US_1.6.0","en_US_1.7.0.2"
-"The value of attribute ""%s"" must be unique","The value of attribute ""%s"" must be unique"
-"The value of attribute ""%s"" must be unique.","De waarde van attribuut ""%s"" dient uniek te zijn."
-"This attribute is used in configurable products","This attribute is used in configurable products"
+"The attribute code \'%s\' is reserved by system. Please try another attribute code","The attribute code \'%s\' is reserved by system. Please try another attribute code"
+"The value of attribute ""%s"" must be unique","De waarde van attribuut ""%s"" moet uniek zijn."
+"The value of attribute ""%s"" must be unique.","De waarde van attribuut ""%s"" moet uniek zijn."
+"This attribute is used in configurable products","Dit attribuut wordt gebruikt in configurabele producten."
 "URL","URL"
 "Unique Value","Unieke waarde"
 "Unique Value (not shared with other products)","Unieke waarde (wordt niet gedeeld met andere producten)"
@@ -126,5 +125,3 @@
 "Wrong type definition for %s","Wrong type definition for %s"
 "Yes","Ja"
 "Yes/No","Ja/Nee"
-"out: %s",""
-"tandaard ´Sorteren op´ in Productlijst bestaat niet in Beschikbare Productlijst Sortering",""
