--- a/app/locale/nl_NL/Mage_GoogleAnalytics.csv
+++ b/app/locale/nl_NL/Mage_GoogleAnalytics.csv
@@ -1,7 +1,7 @@
-"Account Number","Account-nummer"
+"Account Number","Accountnummer"
 "Enable","Inschakelen"
-"Enable IP anonymization","IP anonymization inschakelen"
+"Enable IP anonymization","IP anonimisering inschakelen"
 "Google API","Google API"
 "Google Analytics","Google Analytics"
-"Type","Type","en_US_1.9.1","en_US_1.9.3.7"
-"Universal Analytics","Universal Analytics","en_US_1.9.1","en_US_1.9.3.7"
+"Type","Type"
+"Universal Analytics","Universal Analytics"
