--- a/app/locale/nl_NL/Mage_GoogleOptimizer.csv
+++ b/app/locale/nl_NL/Mage_GoogleOptimizer.csv
@@ -1,14 +1,14 @@
 "-- Please Select --","-- Selecteer a.u.b. --"
-"Account Registration","Account-registratie"
-"All fields of script types have to be filled.","Alle velden van scripttypes moet zijn gevuld"
+"Account Registration","Accountregistratie"
+"All fields of script types have to be filled.","Alle velden van scripttypes moeten gevuld zijn."
 "Attributes","Attributen"
 "Category View Optimization","Optimalisatie categorieweergave"
-"Control Script","Control-script"
+"Control Script","Controlescript"
 "Conversion Page","Conversiepagina"
 "Conversion Page URL","URL conversiepagina"
 "Conversion Script","Conversiescript"
 "Enable","Inschakelen"
-"Google Optimizer Scripts","Google Optimizer-scripts"
+"Google Optimizer Scripts","Google Optimizer scripts"
 "Google Website Optimizer","Google Website Optimizer"
 "Install Scripts","Scripts installeren"
 "Limit is 8 attributes only.","Maximaal 8 attributen."
@@ -30,5 +30,5 @@
 "The limit is 8 attributes only.","Wij hanteren een limiet van 8 producten."
 "Tracking Script","Tracking-script"
 "Use Default","Gebruik standaard"
-"Use Default Values","Gebruik standaard-waarde"
-"Variant Page","Wisselende pagina"
+"Use Default Values","Gebruik standaardwaarde"
+"Variant Page","Variatiepagina"
