--- a/app/locale/nl_NL/Mage_Log.csv
+++ b/app/locale/nl_NL/Mage_Log.csv
@@ -1,11 +1,11 @@
-"Enable Log","Enable Log","en_US_1.9.2.0","en_US_1.9.3.7"
-"Enable Log Cleaning","'Log opschonen' inschakelen"
+"Enable Log","Enable Log"
+"Enable Log Cleaning","Log opschonen inschakelen"
 "Error Email Recipient","Fout e-mail ontvanger"
 "Error Email Sender","Fout e-mail afzender"
-"Error Email Template","Fout e-mail sjabloon"
+"Error Email Template","Fout e-mailsjabloon"
 "Frequency","Frequentie"
-"Log","Log","en_US_1.9.2.0","en_US_1.9.3.7"
+"Log","Log"
 "Log Cleaning","Log opschonen"
-"Log cleanup Warnings","Log Waarschuwingen opschonen"
+"Log cleanup Warnings","Log opschonen waarschuwingen"
 "Save Log, Days","Bewaar log, dagen"
 "Start Time","Starttijd"
