--- a/app/locale/nl_NL/Mage_Newsletter.csv
+++ b/app/locale/nl_NL/Mage_Newsletter.csv
@@ -4,7 +4,7 @@
 "Add to Queue","Aan wachtrij toevoegen"
 "Allow Guest Subscription","Inschrijven voor gasten toestaan"
 "An error occurred while saving your subscription.","Er heeft zich een fout voorgedaan bij het opslaan van uw inschrijving"
-"Are you sure that you want to delete this template?","Weet u zeker dat u deze sjabloon wilt verwijderen?"
+"Are you sure that you want to delete this template?","Weet u zeker dat u dit sjabloon wilt verwijderen?"
 "Are you sure that you want to strip all tags?","Weet u zeker dat u alle tags wilt ontkoppelen?"
 "Back","Terug"
 "Cancel","Annuleren"
@@ -14,11 +14,11 @@
 "Confirmation Email Template","Bevestiging e-mail sjabloon"
 "Confirmation request has been sent.","Verzoek tot bevestiging is verstuurd"
 "Convert to Plain Text","Omzetten naar platte tekst"
-"Create Newsletter Template","Nieuwsbrief-sjabloon aanmaken"
+"Create Newsletter Template","Nieuwsbriefsjabloon aanmaken"
 "Customer","Klant"
 "Customer First Name","Voornaam klant"
 "Customer Last Name","Achternaam klant"
-"Customer Middle Name","Customer midden-naam","en_US_1.9.2.0","en_US_1.9.3.7"
+"Customer Middle Name","Customer midden-naam"
 "Customer My Account Newsletter Subscriptions","Klant > Mijn account > Nieuwsbrief inschrijvingen"
 "Date Added","Datum toegevoegd"
 "Date Updated","Datum bijgewerkt"
@@ -28,7 +28,7 @@
 "Do you really want to cancel the queue?","Weet u zeker dat u deze wachtrrij wilt annuleren?"
 "Duplicate template code.","Dubbele sjabloon code"
 "Edit Newsletter","Nieuwsbrief bewerken"
-"Edit Newsletter Template","Nieuwsbrief-sjabloon bewerken"
+"Edit Newsletter Template","Nieuwsbriefsjabloon bewerken"
 "Edit Queue","Wachtrij bewerken"
 "Edit Template","Template bewerken"
 "Email","E-mail"
@@ -39,25 +39,25 @@
 "Guest","Gast"
 "ID","Id"
 "Invalid queue selected.","Ongeldige wachtrij geselecteerd"
-"Invalid subscription ID.","Incorrect bevestigings ID"
-"Invalid subscription confirmation code.","Deze bevestigingscode is incorrect."
+"Invalid subscription ID.","Ongeldig bevestigings ID"
+"Invalid subscription confirmation code.","Deze bevestigingscode is ongeldig."
 "Message","Bericht"
 "Need to Confirm","Moet bevestigen"
-"New Newsletter Template","Nieuwe nieuwsbrief-sjabloon"
+"New Newsletter Template","Nieuwe nieuwsbriefsjabloon"
 "New Template","Nieuw sjabloon"
 "Newsletter","Nieuwsbrief"
-"Newsletter Message Preview","Preview nieuwsbrief-bericht"
+"Newsletter Message Preview","Preview nieuwsbriefbericht"
 "Newsletter Problem Reports","Nieuwsbrief probleemrapporten"
 "Newsletter Queue","Nieuwsbrief wachtrij"
 "Newsletter Section","Sectie Nieuwsbrief"
 "Newsletter Sign-up:","Inschrijven voor nieuwsbrief:"
 "Newsletter Styles","Nieuwsbrief Stijl"
-"Newsletter Subscribers","Nieuwsbrief abonnees"
+"Newsletter Subscribers","Nieuwsbriefabonnees"
 "Newsletter Subscription","Nieuwsbriefabonnement"
 "Newsletter Subscription Form Before","Nieuwsbrief aanmeldfomulier"
 "Newsletter Subscriptions","Nieuwsbrieven"
-"Newsletter Templates","Nieuwsbrief sjablonen"
-"Newsletter subscription confirmation","Nieuwsbrief abonnementbevestiging"
+"Newsletter Templates","Nieuwsbriefsjablonen"
+"Newsletter subscription confirmation","Bevestiging nieuwsbriefinschrijving"
 "Newsletter subscription success","Nieuwsbrief abonnementscore"
 "Newsletter unsubscription success","Nieuwsbrief opzeggingenscore"
 "No Templates Found","Geen sjablonen gevonden"
@@ -95,10 +95,9 @@
 "Sender Name","Naam afzender"
 "Sending","Bezig met verzenden"
 "Sent","Verzonden"
-"Sign Up for Our Newsletter","Abonneer u op onze nieuwsbrief"
 "Sign Up for Our Newsletter:","Abonneer u op onze nieuwsbrief:"
-"Sign up for our newsletter","Abonneer u op onze nieuwsbrief","en_US_1.4.0","en_US_1.9.3.7"
-"Sorry, but administrator denied subscription for guests. Please <a href=""%s"">register</a>.","Helaas, inschrijving is uitsluitend voor behouden voor geregistreerde klanten. <a href=""%s"">Registreer</a> u om uzelf in te schrijven."
+"Sign up for our newsletter","Abonneer u op onze nieuwsbrief"
+"Sorry, but administrator denied subscription for guests. Please <a href=""%s"">register</a>.","Helaas, inschrijving is uitsluitend voorbehouden voor geregistreerde klanten. <a href=""%s"">Registreer</a> u om uzelf in te schrijven."
 "Start","Start"
 "Status","Status"
 "Store","Winkel"
@@ -119,12 +118,12 @@
 "Template Styles","Template Stijl"
 "Template Subject","Template onderwerp"
 "Template Type","Template soort"
-"Thank you for your subscription.","Hartelijk dank voor uw inschrijving"
+"Thank you for your subscription.","Bedankt voor uw inschrijving"
 "The subscription has been removed.","De inschrijving is verwijderd"
 "The subscription has been saved.","De inschrijving is opgeslagen"
 "There was a problem with the subscription.","Er is een probleem met uw inschrijving"
 "There was a problem with the subscription: %s","Er is een probleem met uw inschrijving: %s"
-"There was a problem with the un-subscription.","Er is een probleem met uitschrijven"
+"There was a problem with the un-subscription.","Er is een probleem met uitschrijven."
 "This email address is already assigned to another user.","Er is al een klant met dit e-mailadres, log in a.u.b."
 "Type","Soort"
 "Unconfirmed","Onbevestigd"
@@ -135,5 +134,5 @@
 "Unsubscription Email Template","Template e-mail uitschrijving"
 "View Newsletter","Nieuwsbrief bekijken"
 "Website","Website"
-"You have been unsubscribed.","U bent uitgeschreven"
+"You have been unsubscribed.","U bent uitgeschreven."
 "Your subscription has been confirmed.","Uw inschrijving is bevestigd."
