--- a/app/locale/nl_NL/Mage_Payment.csv
+++ b/app/locale/nl_NL/Mage_Payment.csv
@@ -1,5 +1,5 @@
 "%s %s cycle.","%s %s cyclus"
-"* Required Fields","* Verplichte velden","en_US_1.9.1","en_US_1.9.3.7"
+"* Required Fields","* Verplichte velden"
 "--Please Select--","--Selecteer a.u.b.--"
 "3D Secure Card Validation","3D Secure Card Validatie"
 "3D Secure Credit Card Validation","3D Secure Credit Card Validatie"
@@ -26,7 +26,7 @@
 "Card Verification Number","Verificatienummer"
 "Cash On Delivery Payment","Betalen bij levering"
 "Centinel API URL","Centinel API URL"
-"Check / Money Order","Cheque / Betaalopdracht"
+"Check / Money Order","Betaling door middel van Overboeking"
 "Credit Card Number","Creditcard-nummer"
 "Credit Card Number: xxxx-%s","Creditcard-nummer: xxxx-%s"
 "Credit Card Type","Creditcard-maatschappij"
@@ -79,9 +79,9 @@
 "Payment from Specific Countries","Betaling van specifieke landen."
 "Payment method code is not set.","Betaalmethode is niet ingesteld"
 "Payment method code is undefined.","Betaalmethode is niet gedefinieerd"
-"Payment profile is invalid:\n%s","Betaalprofiel is niet geldig:\n%s","en_US_1.4.2","en_US_1.9.3.7"
+"Payment profile is invalid:\n%s","Betaalprofiel is niet geldig:\n%s"
 "Period frequency is wrong.","Betaalfrequentie is incorrect"
-"Please enter a valid credit card verification number.","Geef a.u.b. een geldig credit card verificatie nummer op."
+"Please enter a valid credit card verification number.","Geef a.u.b. een geldig creditcard verificatie nummer op."
 "Processor ID","Processor-ID"
 "Purchase Order","Inkooporder"
 "Purchase Order Number","Inkoop ordernummer"
