--- a/app/locale/nl_NL/Mage_Rss.csv
+++ b/app/locale/nl_NL/Mage_Rss.csv
@@ -3,8 +3,8 @@
 "%s RSS Feed","%s RSS Feed"
 "%s has reached a quantity of %s.","%s heeft een aantal van %s bereikt."
 "%s\'s Wishlist","%s\'s verlanglijst"
-"Admin Catalog","Admin Catalog","en_US_1.9.3.0","en_US_1.9.3.7"
-"Admin Order","Admin Order","en_US_1.9.3.0","en_US_1.9.3.7"
+"Admin Catalog","Admin Catalog"
+"Admin Order","Admin Order"
 "Cannot retrieve the wishlist","Kan verlanglijst niet ophalen"
 "Catalog","Catalogus"
 "Category Feeds","Categorie-feeds"
@@ -13,7 +13,7 @@
 "Coupons/Discounts","Kortingsbonnen/kortingen"
 "Current Status: %s<br/>","Huidige status: %s<br />"
 "Customer Name: %s","Klantnaam: %s"
-"Customer Order Notification","Customer Order Notification","en_US_1.9.3.0","en_US_1.9.3.7"
+"Customer Order Notification","Customer Order Notification"
 "Customer Order Status Notification","Melding bestelstatus van klant"
 "Details for %s #%s","Details voor %s #%s"
 "Discount","Korting"
@@ -27,12 +27,12 @@
 "Low Stock Products","Producten met weinig voorraad"
 "Message:","Bericht:"
 "Miscellaneous Feeds","Diverse Feeds"
-"New Order Notification","New Order Notification","en_US_1.9.3.0","en_US_1.9.3.7"
+"New Order Notification","New Order Notification"
 "New Orders","Nieuwe bestellingen"
 "New Products","Nieuwe producten"
 "New Products from %s","Nieuwe producten van %s"
 "Notified Date: %s<br/>","Datum ingelicht: %s<br />"
-"Order","Bestelling","en_US_1.9.3.0","en_US_1.9.3.7"
+"Order","Bestelling"
 "Order # %s Notification(s)","Bestelling %s melding(en)"
 "Order #%s created at %s","Bestelling %s aangemaakt op %s"
 "Pending product review(s)","Onafgehandelde productbeoordelingen"
@@ -44,12 +44,12 @@
 "RSS Feeds","RSS feeds"
 "RSS Feeds List","RSS Feeds lijst"
 "RSS Feeds Section","RSS Feeds Section"
-"Review Notification","Review Notification","en_US_1.9.3.0","en_US_1.9.3.7"
+"Review Notification","Review Notification"
 "Review: %s <br/>","Beoordeel: %s"
 "Rss Config","RSS configuratie"
 "Shipping &amp; Handling","Verzending en verwerking"
 "Special Products","Speciale producten"
-"Stock Notification","Stock Notification","en_US_1.9.3.0","en_US_1.9.3.7"
+"Stock Notification","Voorraadmelding"
 "Store: %s <br/>","Winkel: %s<br />"
 "Subtotal","Subtotaal"
 "Summary of review: %s <br/>","Samenvatting van beoordeling: %s<br>"
