--- a/app/locale/nl_NL/Mage_Tax.csv
+++ b/app/locale/nl_NL/Mage_Tax.csv
@@ -1,35 +1,36 @@
 "'*' - matches any; 'xyz*' - matches any that begins on 'xyz' and not longer than %d.","'*' -matcht elke; 'xyz*' -matcht alles dat begint met 'xyz' en niet langer met %d."
 "-- Please Select --","-- Selecteer a.u.b. --"
 "Add New Class","Nieuwe tariefgroep toevoegen"
-"Add New Tax Rate","Nieuw BTW-tarief toevoegen"
-"Add New Tax Rule","Nieuwe BTW-regel toevoegen"
+"Add New Tax Rate","Nieuw btw-tarief toevoegen"
+"Add New Tax Rule","Nieuwe btw-regel toevoegen"
 "After Discount","Na korting"
-"An error occurred while deleting this rate.","Er is een fout opgetreden tijdens het verwijderen van de percentage."
+"An error occurred while deleting this rate.","Er is een fout opgetreden tijdens het verwijderen van het tarief."
 "An error occurred while deleting this rate. Incorrect rate ID.","Er is een fout opgetreden tijdens het verwijderen van het tarief. Een foutieve tarief ID."
-"An error occurred while deleting this tax class.","Er is een fout opgetreden tijdens het verwijderen van het BTW-tarief."
-"An error occurred while deleting this tax rule.","Er is een fout opgetreden bij het verwijderen van de BTW regel."
-"An error occurred while saving this tax class.","Er is een fout opgetreden bij het opslaan van het BTW-tarief."
-"An error occurred while saving this tax class. A class with the same name","Er is een fout opgetreden bij het opslaan van dit BTW-tarief. Een tarief met dezelfde naam"
-"An error occurred while saving this tax rule.","Er is een fout opgetreden bij het opslaan van het BTW-tarief."
-"Apply Customer Tax","BTW in rekening brengen:"
+"An error occurred while deleting this tax class.","Er is een fout opgetreden tijdens het verwijderen van de tariefgroep."
+"An error occurred while deleting this tax rule.","Er is een fout opgetreden bij het verwijderen van de btw-regel."
+"An error occurred while saving this tax class.","Er is een fout opgetreden bij het opslaan van de tariefgroep."
+"An error occurred while saving this tax class. A class with the same name","Er is een fout opgetreden bij het opslaan van tariefgroep. Er bestaat al een klasse met dezelfde naam."
+"An error occurred while saving this tax class. A class with the same name already exists.","Er is een fout opgetreden bij het opslaan van tariefgroep. Er bestaat al een klasse met dezelfde naam."
+"An error occurred while saving this tax rule.","Er is een fout opgetreden bij het opslaan van het btw-regel."
+"Apply Customer Tax","Btw in rekening brengen:"
 "Apply Discount On Prices","Bereken de korting op de prijzen."
-"Apply Tax On","Bereken BTW op"
-"Apply discount on price including tax is calculated based on store tax, if ""Apply Tax after Discount"" is selected.","Geef aan of kortingen op de inclusief of exclusief BTW prijs worden doorgevoerd."
+"Apply Tax On","Bereken btw op"
+"Apply discount on price including tax is calculated based on store tax, if ""Apply Tax after Discount"" is selected.","Geef aan of kortingen op de inclusief of exclusief btw prijs worden doorgevoerd."
 "Are you sure you want to do this?","Weet u zeker dat u dit wilt?"
 "Back","Terug"
-"Before Discount","Voorafgaand aan korting"
+"Before Discount","Voor korting"
 "CSV","CSV"
 "Calculate off subtotal only","Bereken alleen a.h.v. subtotaal"
-"Calculation Settings","BTW berekeningsmethodiek"
+"Calculation Settings","Btw berekeningsmethodiek"
 "Catalog Prices","Catalogusprijzen"
 "Class Name","Naam tariefgroep"
-"Click here to go to <a href=""%s"">Tax configuration</a> and change your settings.","Ga naar <a href=""%s"">BTW-configuratie</a> om uw instellingen aan te passen"
+"Click here to go to <a href=""%s"">Tax configuration</a> and change your settings.","Ga naar <a href=""%s"">btw-configuratie</a> om uw instellingen aan te passen."
 "Code","Interne naam"
 "Country","Land"
 "Custom price if available","Aangepaste prijs als deze beschikbaar is"
-"Customer Tax Class","BTW-tariefgroep klant"
-"Customer Tax Class Information","Gegevens BTW-tariefgroep klant"
-"Customer Tax Classes","BTW-tariefgroepen klant"
+"Customer Tax Class","Btw-tariefgroep klant"
+"Customer Tax Class Information","Gegevens btw-tariefgroep klant"
+"Customer Tax Classes","Btw-tariefgroepen klant"
 "Default Country","Standaard land"
 "Default Post Code","Standaard postcode"
 "Default State","Standaard provincie"
@@ -37,50 +38,50 @@
 "Delete Class","Tariefgroep verwijderen"
 "Delete Rate","Tarief verwijderen"
 "Delete Rule","Regel verwijderen"
-"Display Full Tax Summary","Volledig BTW-overzicht tonen"
+"Display Full Tax Summary","Volledig btw-overzicht tonen"
 "Display Prices","Prijzen tonen"
 "Display Product Prices In Catalog","Productprijzen tonen in catalogus"
 "Display Shipping Amount","Verzendkosten tonen"
 "Display Shipping Prices","Transportkosten tonen"
 "Display Subtotal","Subtotaal tonen"
-"Display Zero Tax Subtotal","BTW van nul tonen in subtotaal"
+"Display Zero Tax Subtotal","Btw van nul tonen in subtotaal"
 "Edit Class","Tariefgroep bewerken"
 "Edit Class '%s'","Bewerken van tariefgroep ‘%s’"
 "Edit Rule","Regel bewerken"
-"Edit Tax Rate","Bewerk BTW-tarief"
-"Enable Cross Border Trade","Enable Cross Border Trade","en_US_1.9.1","en_US_1.9.3.7"
+"Edit Tax Rate","Bewerk btw-tarief"
+"Enable Cross Border Trade","Enable Cross Border Trade"
 "Excel XML","Excel XML"
-"Excl. Tax","Excl. BTW"
-"Excl. Tax:","Excl. BTW:"
-"Excluding Tax","Exclusief BTW"
-"Export Tax Rates","Exporteer BTW-tarieven"
-"Grand Total (Excl. Tax)","Totaal (excl. BTW)"
-"Grand Total (Excl.Tax)","Totaal (excl. BTW)"
-"Grand Total (Incl. Tax)","Totaal (incl. BTW)"
-"Grand Total (Incl.Tax)","Totaal (incl. BTW)"
-"Grand Total Excl. Tax","Totaal (excl. BTW)"
-"Grand Total Incl. Tax","Totaal (incl. BTW)"
+"Excl. Tax","Excl. btw"
+"Excl. Tax:","Excl. btw:"
+"Excluding Tax","Exclusief btw"
+"Export Tax Rates","Exporteer btw-tarieven"
+"Grand Total (Excl. Tax)","Totaal (excl. btw)"
+"Grand Total (Excl.Tax)","Totaal (excl. btw)"
+"Grand Total (Incl. Tax)","Totaal (incl. btw)"
+"Grand Total (Incl.Tax)","Totaal (incl. btw)"
+"Grand Total Excl. Tax","Totaal (excl. btw)"
+"Grand Total Incl. Tax","Totaal (incl. btw)"
 "Ignore this notification","Deze notificatie negeren"
-"Import / Export Tax Rates","BTW-tarieven in- en exporteren"
-"Import Tax Rates","BTW-groepen importeren"
-"Inc. Tax","Incl. BTW"
-"Incl. Tax","Incl. BTW"
-"Incl. Tax:","Incl. BTW:"
-"Include Tax In Grand Total","BTW toevoegen aan eindtotaal"
-"Including Tax","Inclusief BTW"
-"Including and Excluding Tax","In- en exclusief BTW"
+"Import / Export Tax Rates","Btw-tarieven in- en exporteren"
+"Import Tax Rates","Btw-groepen importeren"
+"Inc. Tax","Incl. btw"
+"Incl. Tax","Incl. btw"
+"Incl. Tax:","Incl. btw:"
+"Include Tax In Grand Total","Btw toevoegen aan eindtotaal"
+"Including Tax","Inclusief btw"
+"Including and Excluding Tax","In- en exclusief btw"
 "Invalid file format upload attempt","Poging ongeldig bestandsformaat te uploaden"
-"Invalid file upload attempt","Poging Ongeldig bestand te uploaden"
-"Manage Customer Tax Classes","Beheer BTW-groepen klanten"
-"Manage Product Tax Classes","Beheer BTW-groepen producten"
-"Manage Tax Rates","Beheer BTW-tarieven"
-"Manage Tax Rules","Beheer BTW-regels"
+"Invalid file upload attempt","Poging ongeldig bestand te uploaden"
+"Manage Customer Tax Classes","Beheer btw-groepen klanten"
+"Manage Product Tax Classes","Beheer btw-groepen producten"
+"Manage Tax Rates","Beheer btw-tarieven"
+"Manage Tax Rules","Beheer btw-regels"
 "Manage Tax Zones & Rates","Beheer belastingzones & tarieven"
 "Maximum zip code length is 9.","Maximale lengte voor de postcode is 9"
 "Name","Naam"
-"New Class","Nieuwe BTW-groep"
+"New Class","Nieuwe btw-groep"
 "New Rule","Nieuwe regel"
-"New Tax Rate","Nieuw BTW-tarief"
+"New Tax Rate","Nieuw btw-tarief"
 "No","Nee"
 "None","Geen"
 "One of the country has invalid code.","Eén van de landen heeft een ongeldige code"
@@ -90,9 +91,9 @@
 "Please see <a href=""%s"">source</a> for more details.","Bekijk de <a href=""%s"">bron</a> voor meer details."
 "Price Display Settings","Prijsweergave instellingen"
 "Priority","Prioriteit"
-"Product Tax Class","BTW-tariefgroep product"
-"Product Tax Class Information","BTW-tariefgegevens van product"
-"Product Tax Classes","BTW-groepen product"
+"Product Tax Class","Btw-tariefgroep product"
+"Product Tax Class Information","Btw-tariefgegevens van product"
+"Product Tax Classes","Btw-groepen product"
 "Range From","Van"
 "Range To","Tot"
 "Range To should be equal or greater than Range From.","""Bereik tot"" moet gelijk zijn of groter dan ""Bereik van"""
@@ -105,60 +106,60 @@
 "Save Class","Tariefgroep opslaan"
 "Save Rate","Tarief opslaan"
 "Save Rule","Regel opslaan"
-"Save and Continue Edit","Opslaan en bewerken continueren"
-"Shipping & Handling (Excl.Tax)","Verzend- en verwerkingskosten (excl. BTW)"
-"Shipping & Handling (Incl.Tax)","Verzend- en verwerkingskosten (incl. BTW)"
-"Shipping & Handling Tax","BTW Verzend- en verwerkingskosten"
-"Shipping (Excl. Tax)","Verzendkosten (excl. BTW)"
-"Shipping (Incl. Tax)","Verzendkosten (incl. BTW)"
-"Shipping Excl. Tax (%s)","Verzendkosten excl. BTW (%s)"
-"Shipping Incl. Tax (%s)","Verzendkosten incl. BTW (%s)"
+"Save and Continue Edit","Opslaan en verder bewerken"
+"Shipping & Handling (Excl.Tax)","Verzend- en verwerkingskosten (excl. btw)"
+"Shipping & Handling (Incl.Tax)","Verzend- en verwerkingskosten (incl. btw)"
+"Shipping & Handling Tax","Btw Verzend- en verwerkingskosten"
+"Shipping (Excl. Tax)","Verzendkosten (excl. btw)"
+"Shipping (Incl. Tax)","Verzendkosten (incl. btw)"
+"Shipping Excl. Tax (%s)","Verzendkosten excl. btw (%s)"
+"Shipping Incl. Tax (%s)","Verzendkosten incl. btw (%s)"
 "Shipping Prices","Verzendkosten"
 "Shopping Cart Display Settings","Winkelwagen weergave instellingen"
 "Sort Order","Sorteervolgorde"
 "State","Provincie"
 "State/Region","Provincie"
-"Subtotal (Excl. Tax)","Subtotaal (excl. BTW)"
-"Subtotal (Excl.Tax)","Subtotaal (excl. BTW)"
-"Subtotal (Incl. Tax)","Subtotaal (incl. BTW)"
-"Subtotal (Incl.Tax)","Subtotaal (incl. BTW)"
+"Subtotal (Excl. Tax)","Subtotaal (excl. btw)"
+"Subtotal (Excl.Tax)","Subtotaal (excl. btw)"
+"Subtotal (Incl. Tax)","Subtotaal (incl. btw)"
+"Subtotal (Incl.Tax)","Subtotaal (incl. btw)"
 "Subtotal only","Enkel subtotaal"
-"Tax","BTW"
-"Tax Calculation Based On","BTW berekening op basis van"
-"Tax Calculation Method Based On","BTW berekeningsmethodiek o.b.v"
-"Tax Class for Shipping","BTW-groep voor verzending"
-"Tax Classes","BTW-tariefgroepen"
-"Tax Identifier","BTW-identifier"
-"Tax Rate","BTW-tarief"
-"Tax Rate Information","BTW-tariefgegevens"
-"Tax Rule Information","BTW-tariefgroep-gegevens"
-"Tax Rules","BTW-regels"
-"Tax Section","Sectie BTW"
-"Tax Titles","BTW namen"
-"Tax rate cannot be removed. It exists in tax rule","BTW-regel kan niet worden verwijderd, er bestaald al een BTW-regel."
-"Tax rates at the same priority are added, others are compounded.","BTW-tarieven met dezelfde prioriteit worden opgeteld, andere worden gecombineerd."
-"The tax class has been deleted.","Dit BTW percentage is verwijderd"
-"The tax class has been saved.","Dit BTW percentage is opgeslagen"
-"The tax rate has been deleted.","Dit BTW percentage is verwijderd"
-"The tax rate has been imported.","Dit BTW percentage is geimporteerd"
-"The tax rate has been saved.","Het BTW percentage is opgeslagen"
-"The tax rule has been deleted.","De BTW regel is verwijderd"
-"The tax rule has been saved.","De BTW regel is opgeslagen"
+"Tax","Btw"
+"Tax Calculation Based On","Btw berekening op basis van"
+"Tax Calculation Method Based On","Btw berekeningsmethodiek o.b.v"
+"Tax Class for Shipping","Btw-groep voor verzending"
+"Tax Classes","Btw-tariefgroepen"
+"Tax Identifier","Btw-identifier"
+"Tax Rate","Btw-tarief"
+"Tax Rate Information","Btw-tariefgegevens"
+"Tax Rule Information","Btw-tariefgroepgegevens"
+"Tax Rules","Btw-regels"
+"Tax Section","Sectie btw"
+"Tax Titles","Btw namen"
+"Tax rate cannot be removed. It exists in tax rule","Btw-regel kan niet worden verwijderd, er bestaald al een btw-regel."
+"Tax rates at the same priority are added, others are compounded.","Btw-tarieven met dezelfde prioriteit worden opgeteld, andere worden gecombineerd."
+"The tax class has been deleted.","Dit btw percentage is verwijderd"
+"The tax class has been saved.","Dit btw percentage is opgeslagen"
+"The tax rate has been deleted.","Dit btw percentage is verwijderd"
+"The tax rate has been imported.","Dit btw percentage is geimporteerd"
+"The tax rate has been saved.","Het btw percentage is opgeslagen"
+"The tax rule has been deleted.","De btw regel is verwijderd"
+"The tax rule has been saved.","De btw regel is opgeslagen"
 "This class no longer exists","Deze tariefgroep bestaat niet meer"
 "This rule no longer exists","Deze regel bestaat niet meer"
 "This rule no longer exists.","Deze regel bestaat niet meer"
 "Total","Totaal"
 "Unit Price","Stuksprijs"
-"Warning tax configuration can result in rounding errors","Waarschuwing: BTW-configuratie kan in afrondfouten resulteren"
-"Warning tax configuration can result in unexpected FPT prices on applicable devices","Waarschuwing: BTW-configuratie kan resulteren in een onverwachte FPT prijzen op toepasselijke devices"
-"Warning tax discount configuration might result in different discounts than a customer might expect","Waarschuwing: BTW korting configuratie kan resulteren in andere kortingen dan een klant zou verwachten."
-"When catalog price includes tax, enable this setting will fix the price no matter what the customer's tax rate is.","When catalog price includes tax, enable this setting will fix the price no matter what the customer's tax rate is.","en_US_1.9.1","en_US_1.9.3.7"
-"Whether catalog prices entered by admin include tax.","Geef aan of de catalogusprijzen door de beheerder inclusief BTW worden ingevoerd."
-"Whether shipping amounts entered by admin or obtained from gateways include tax.","Geef aan of de verzendkosten door de beheerder inclusief BTW worden ingevoerd."
+"Warning tax configuration can result in rounding errors","Waarschuwing: btw-configuratie kan in afrondfouten resulteren"
+"Warning tax configuration can result in unexpected FPT prices on applicable devices","Waarschuwing: Btw-configuratie kan resulteren in een onverwachte FPT prijzen op toepasselijke devices"
+"Warning tax discount configuration might result in different discounts than a customer might expect","Waarschuwing: Btw korting configuratie kan resulteren in andere kortingen dan een klant zou verwachten."
+"When catalog price includes tax, enable this setting will fix the price no matter what the customer's tax rate is.","When catalog price includes tax, enable this setting will fix the price no matter what the customer's tax rate is."
+"Whether catalog prices entered by admin include tax.","Geef aan of de catalogusprijzen door de beheerder inclusief btw worden ingevoerd."
+"Whether shipping amounts entered by admin or obtained from gateways include tax.","Geef aan of de verzendkosten door de beheerder inclusief btw worden ingevoerd."
 "Yes","Ja"
 "You cannot delete this tax class as it is used for %d customer groups.","U kunt deze tariefgroep niet verwijderen omdat hij nog gebruikt wordt bij %d klantgroepen."
 "You cannot delete this tax class as it is used for %d products.","U kunt deze tariefgroep niet verwijderen omdat hij nog gebruikt wordt voor %d producten."
-"You cannot delete this tax class as it is used in Tax Rules. You have to delete the rules it is used in first.","U kunt deze tariefgroep niet verwijderen omdat hij nog gebruikt wordt in BTW-regels. U moet eerst de regels verwijderen waarin hij wordt gebruikt."
+"You cannot delete this tax class as it is used in Tax Rules. You have to delete the rules it is used in first.","U kunt deze tariefgroep niet verwijderen omdat hij nog gebruikt wordt in btw-regels. U moet eerst de regels verwijderen waarin hij wordt gebruikt."
 "Zip code should not contain characters other than digits.","Postcode mag niets anders bevatten dan cijfers"
 "Zip/Post Code","Postcode"
 "Zip/Post is Range","Postcodereeks"
