--- a/app/locale/nl_NL/Mage_Weee.csv
+++ b/app/locale/nl_NL/Mage_Weee.csv
@@ -1,6 +1,6 @@
 "All Websites","Alle websites"
 "Apply Discounts To FPT","Kortingen toepassen op FPT"
-"Apply Tax To FPT","BTW toepassen op FPT"
+"Apply Tax To FPT","Btw toepassen op FPT"
 "Display Prices In Emails","Toon prijzen in Email"
 "Display Prices In Product Lists","Prijzen tonen in productoverzicht"
 "Display Prices In Sales Modules","Prijzen Tonen in verkoop modules"
@@ -9,17 +9,17 @@
 "Excluding FPT","Exclusief FPT"
 "Excluding FPT, FPT description, final price","Exclusief FPT en FPT omschrijving. Eindprijs."
 "FPT Tax Configuration","FPT BTW-configuratie"
-"Fixed Product Tax","Vast product BTW tarief"
-"Fixed Product Taxes","Vast product BTW tarieven"
+"Fixed Product Tax","Vast product btw tarief"
+"Fixed Product Taxes","Vast product btw tarieven"
 "Include FPT In Subtotal","Inclusief FPT in subtotaal"
 "Including FPT and FPT description","Inclusief FPT en FPT omschrijving"
-"Including FPT and FPT description [incl. FPT VAT]","Inclusief FPT en FPT omschrijving [incl. FPT BTW]"
+"Including FPT and FPT description [incl. FPT VAT]","Inclusief FPT en FPT omschrijving [incl. FPT btw]"
 "Including FPT only","Inclusief FPT"
-"Loaded and Displayed with Tax","Geladen en getoond met BTW"
-"Not Taxed","Geen BTW toegepast"
-"Taxed","BTW toegepast"
+"Loaded and Displayed with Tax","Geladen en getoond met btw"
+"Not Taxed","Geen btw toegepast"
+"Taxed","Btw toegepast"
 "Total","Totaal"
-"Total Incl. Tax","Totaal inclusief BTW"
-"Total excl. tax","Totaal exclusief BW"
-"Total incl. tax","Totaal inclusief BTW"
+"Total Incl. Tax","Totaal inclusief btw"
+"Total excl. tax","Totaal exclusief btw"
+"Total incl. tax","Totaal inclusief btw"
 "Total:","Totaal:"
