--- a/app/locale/nl_NL/Mage_Widget.csv
+++ b/app/locale/nl_NL/Mage_Widget.csv
@@ -5,8 +5,8 @@
 "Add New Widget Instance","Voeg Widget toe"
 "All","Alles"
 "All Pages","Alle paginas"
-"All Product Types","Alle product types"
-"An error occurred during saving a widget: %s","Er is een fout opgetreden tijden het opslaan van een widget: %s"
+"All Product Types","Alle producttypes"
+"An error occurred during saving a widget: %s","Er is een fout opgetreden tijdens het opslaan van een widget: %s"
 "Anchor Categories","Verankerde Categorieen"
 "Apply","Toepassen"
 "Assign to Store Views","Koppel aan Storeviews"
@@ -20,12 +20,12 @@
 "Default Template","Standaard sjabloon"
 "Delete","Verwijderen"
 "Design Package/Theme","Ontwerp Pakket/Thema"
-"Error occurs during loading chooser.","Error occurs during loading chooser.","en_US_1.9.2.0","en_US_1.9.3.7"
+"Error occurs during loading chooser.","Error occurs during loading chooser."
 "Export to:","Exporteer naar:"
 "Frontend Properties","Frontend eigenschappen"
 "Generic Pages","Generieke paginas"
-"Go to Next page","Ga naar de volgende pagina","en_US_1.9.2.0","en_US_1.9.3.7"
-"Go to Previous page","Ga naar de vorige pagina","en_US_1.9.2.0","en_US_1.9.3.7"
+"Go to Next page","Ga naar de volgende pagina"
+"Go to Previous page","Ga naar de vorige pagina"
 "Images","Afbeeldingen"
 "Insert Widget","Widget invoegen"
 "Insert Widget...","Widget invoegen..."
