--- a/app/locale/nl_NL/Mage_Adminhtml.csv
+++ b/app/locale/nl_NL/Mage_Adminhtml.csv
@@ -46,8 +46,8 @@
 "<h1 class=""page-heading"">404 Error</h1><p>Page not found.</p>","<h1 class=""page-heading"">404 Error</h1><p>Pagina niet gevonden.</p>"
 "<strong>%s</strong> requests access to your account","<strong>%s</strong> vraagt toegang tot uw account"
 "<strong>Attention</strong>: Captcha is case sensitive.","<strong>Let op</strong>: Captcha is hoofdletter gevoelig."
-"A user with the same user name or email aleady exists.","Een gebruiker met deze naam of dit e-mailadres bestaat reeds"
-"A user with the same user name or email already exists.","Een gebruiker met deze naam of dit e-mailadres bestaat reeds"
+"A user with the same user name or email aleady exists.","Een gebruiker met deze naam of dit e-mailadres bestaat reeds."
+"A user with the same user name or email already exists.","Een gebruiker met deze naam of dit e-mailadres bestaat reeds."
 "API Key","API-sleutel"
 "API Key Confirmation","API-sleutelbevestiging"
 "ASCII","ASCII"
@@ -232,8 +232,8 @@
 "Chart is disabled. If you want to enable chart, click <a href=""%s"">here</a>.","Grafiek is uitgeschakeld. Om deze te activeren, klik <a href=""%s"">hier</a>."
 "Checkbox","Checkbox"
 "Child Transactions","Bijbehorende transacties"
-"Choose Store View:","Kies een winkelzicht:"
-"Choose an attribute","kies een attribuut"
+"Choose Store View:","Winkelzicht kiezen:"
+"Choose an attribute","Attribuut kiezen"
 "Chosen category does not associated with any website, so url rewrite is not possible.","De gekozen categorie is niet gekoppeld aan een website, dus er zijn geen URL rewrites mogelijk."
 "Chosen product does not associated with any website, so url rewrite is not possible.","Het gekozen product is niet gekoppeld aan een website, dus er zijn geen URL rewrites mogelijk."
 "Clear","Legen"
@@ -319,7 +319,7 @@
 "Delete","Verwijder"
 "Delete %s","%s verwijderen"
 "Delete %s '%s'","%s, %s verwijderen"
-"Delete Block","Blok verwijderen"
+"Delete Block","Verwijder blok"
 "Delete File","Verwijder bestand"
 "Delete Image","Verwijder afbeelding"
 "Delete Profile","Verwijder profiel"
@@ -1125,11 +1125,12 @@
 "Time:","Tijd"
 "Timeout limit for response from synchronize process was reached.","Timeout limiet voor synchronisatieproces is bereikt."
 "To","Tot"
-"To cancel pending authorizations and release amounts that have already been processed during this payment, click Cancel.","Om autorisaties-in-afwachting te annuleren en de bedragen vrij te geven welke al verwerkt zijn tijdens deze betaling, klik Annuleren"
+"To cancel pending authorizations and release amounts that have already been processed during this payment, click Cancel.","Om autorisaties-in-afwachting te annuleren en de bedragen vrij te geven welke al verwerkt zijn tijdens deze betaling, klik Annuleren."
 "To use PayPal Payflow Link you must configure some settings in your Payflow account by logging into","Om PayPal Payflow Link te gebruiken moet u enkele instellingen in uw Payflow account instellen door in te loggen in"
 "To use PayPal Payflow Link, you must configure your PayPal Payflow Link account on the PayPal website.","Om de PayPal Payflow Link te gebruiken moet u deze configureren op de PayPal website."
 "To use PayPal Payments Advanced you must configure some settings in your PayPal Payments Advanced account by logging into","Om PayPal Payments Advanced te gebruiken moet u enkele instellingen in uw PayPay Payments Advanced account instellen door"
 "To use PayPal Payments Advanced, you must configure  your PayPal Payments Advanced account on the PayPal website.","Om de PayPal Payements Advanced te gebruiken moet u deze configureren op de PayPal website."
+"To use PayPal Payments Advanced, you must configure your PayPal Payments Advanced account on the PayPal website.","Om de PayPal Payements Advanced te gebruiken moet u deze configureren op de PayPal website."
 "Toggle Editor","Editor gebruiken"
 "Tools","Hulpmiddelen"
 "Top 5 Search Terms","Top 5 zoektermen"
