--- a/app/locale/nl_NL/Mage_Eav.csv
+++ b/app/locale/nl_NL/Mage_Eav.csv
@@ -56,6 +56,7 @@
 "Default option value is not defined","Waarde van standaardoptie is niet gedefinieerd"
 "Delete","Verwijderen"
 "Dropdown","Dropdown"
+"EAV types and attributes","EAV types and attributes"
 "Email","E-mail"
 "Entity collection expected.","Entiteitencollectie verwacht."
 "Entity collections expected.","Entiteitencollectie verwacht."
