--- a/app/locale/nl_NL/Mage_Sales.csv
+++ b/app/locale/nl_NL/Mage_Sales.csv
@@ -338,6 +338,8 @@
 "Items in the Package","Producten in het pakket"
 "Items maximum quantity or price do not allow checkout.","Maximaal aantal of prijs van artikel is niet toegestaan, kan niet afrekenen."
 "Items options declaration error.","Artikelopties declaratiefout"
+"Items to Invoice","Te factureren artikelen"
+"Items to Invoice and Ship","Te factureren en verzenden artikelen"
 "Items to Refund","Terug te betalen artikelen"
 "Items to Ship","Te verzenden artikelen"
 "Key","Sleutel"
@@ -842,7 +844,6 @@
 "Unknown Status","Onbekende status"
 "Unsupported transaction type ""%s"".","Ongeldig transactietype ""%s""."
 "Update Changes","Wijzigingen bijwerken"
-"Update Items and Qty's","Producten en aantallen bijwerken."
 "Update Items and Qty\'s","Producten en aantallen bijwerken."
 "Update Qty\'s","Aantallen bijwerken"
 "Updated At","Bijgewerkt op"
