--- a/app/locale/nl_NL/Mage_Shipping.csv
+++ b/app/locale/nl_NL/Mage_Shipping.csv
@@ -3,6 +3,7 @@
 "# of Items vs. Destination","# artikelen versus bestemming"
 "Allow Shipping to Multiple Addresses","Verzending naar meerdere adressen toestaan"
 "An error occurred while import table rates.","Er is een fout opgetreden bij het importeren van tabelprijzen"
+"Best Way","Best Way"
 "Calculate Handling Fee","Verzendkosten berekenen"
 "Carrier:","Vervoerder:"
 "City","Plaats"
